--- a/localisation/braz_por/MD_focus_FRA_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_FRA_l_braz_por.yml
@@ -379,8 +379,7 @@
  FRA_operation_serval: "Operação Serval"
  FRA_operation_serval_desc: "Operação Serval é o nome usado para a série de intervenções francesas e malianas durante a Guerra Civil no Mali como a primeira fase do conflito contra Extremistas Islâmicos na região."
  FRA_French_pillar_of_counterterrorism: "Pilar do Contra-Terrorismo"
- FRA_French_pillar_of_counterterrorism_desc: "Nossas forças anti-terroristas e anti-extremistas se tornaram mundialmente conhecidas e nos tornamos um pilar e a face do contra-terrorismo em todo o mundo."
- FRA_french_pillar_of_counterterroism_tt: "Enviando §YAdvisores Estrangeiros§! para Nações para Fins de §YContra-Terrorismo§! nossos conselheiros dobram o bônus fornecido à §YNação Aconselhada§!."
+ FRA_French_pillar_of_counterterrorism_desc: "Nossas forças antiterroristas e antiextremistas se tornaram mundialmente conhecidas e nos tornamos um pilar e a face do contraterrorismo em todo o mundo."
  FRA_the_french_foreign_legion: "A Legião Estrangeira Francesa"
  FRA_the_french_foreign_legion_desc: "A Legião Estrangeira Francesa é um corpo de elite do Exército Francês que consiste em uma variedade de especialidades. Tendo sido formada em 1831 pelo então Rei Louis Philippe, ela foi destinada a permitir que recrutas estrangeiros tivessem um lugar entre as forças francesas. Como tal, a Legião é uma força de combate multiétnica e multicultural mundialmente conhecida pela disciplina e espírito de corpo."
  FRA_sahel_support_initiative: "Iniciativa de Apoio ao Sahel"
@@ -750,3 +749,4 @@
  FRA_idea_communist_revolution1_desc: "O fogo da revolução arde cada vez mais intensamente à medida que as rodas do tempo continuam a mudar. Devemos procurar atiçar estas chamas prosseguindo a revolução aqui no país e no estrangeiro."
  FRA_idea_communist_revolution2: "Grandes Incêndios da Revolução"
  FRA_idea_communist_revolution2_desc: "A revolução está prestes a varrer o mundo em busca do futuro da humanidade."
+ FRA_french_pillar_of_counterterrorism_tt: "Enviando §YAdvisores Estrangeiros§! para Nações para Fins de §YContra-Terrorismo§! nossos conselheiros dobram o bônus fornecido à §YNação Aconselhada§!."
