--- a/localisation/braz_por/MD_focus_IND_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_IND_l_braz_por.yml
@@ -7,7 +7,7 @@
  IND_japanese_aid: "Chamar a Ajuda Japonesa"
  IND_japanese_aid_desc: "Apesar de nossas diferenças na Segunda Guerra Mundial, o Japão tem sido bastante generoso conosco em nossos problemas econômicos. Devemos contatá-los e seus aliados ocidentais para nos ajudar nessa situação."
  IND_japanese_aid_jica: "A JICA"
- IND_japanese_aid_jica_desc: "A JICA, também conhecida como Agência de Cooperação Internacional do Japão, pode ser uma organização muito útil para ajudar no desenvolvimento da infraestrutura e estradas de nossa nação."
+ IND_japanese_aid_jica_desc: "A JICA, também conhecida como Agência Japonesa de Cooperação Internacional, pode ser uma organização muito útil para ajudar a desenvolver a infraestrutura e as estradas de nossas nações."
  IND_japanese_aid_metro_invest: "Investimentos em Metrô Japoneses"
  IND_japanese_aid_metro_invest_desc: "Nosso povo precisa se locomover rapidamente pela nação, e com a tecnologia e investimentos em metrô japoneses, podemos alcançar esse objetivo."
  IND_japanese_aid_java_airport: "Aeroportos do Oeste de Java"
@@ -618,7 +618,7 @@
  indonesia.3.d: "Após nossa aprovação para a independência de Timor-Leste, as Nações Unidas aprovaram a constituição deles. Um Timor-Leste democrático e independente em breve será nosso vizinho..."
  indonesia.3.a: "É o que eles queriam"
  indonesia.4.t: "Timor-Leste está livre!"
- indonesia.4.d: "É oficial. A aprovação da ONU de sua constituição finalmente foi promulgada, e um Timor-Leste independente é agora nosso vizinho."
+ indonesia.4.d: "É oficial. A aprovação da constituição pela ONU foi finalmente promulgada, e um Timor Leste independente é agora nosso vizinho."
  indonesia.4.a: "Vamos esperar por boas relações"
  indonesia.9.t: "Indonésia nega a independência de Timor-Leste!"
  indonesia.9.d: "O regime indonésio negou ao povo de Timor-Leste sua liberdade e independência. Muitos grupos rebeldes têm olhado para nós como libertadores em potencial e no momento há muita tensão na região e no mundo..."
@@ -631,9 +631,9 @@
  indonesia.77.t: "Tensão Étnica Rampante!"
  indonesia.77.d: "É hora de resolver os conflitos étnicos que assolam nossa nação. Muitos lugares como Ambon e Bornéu vivenciam violência quase diariamente. A nação não pode continuar se seu povo está lutando uns contra os outros por crenças religiosas. Devemos agora tomar uma posição e escolher quem queremos apoiar, se alguém."
  indonesia.77.a: "Os muçulmanos precisam de nós!"
- indonesia.77.b: "Não escolhemos favoritos, só resolvam isso de uma vez!"
+ indonesia.77.b: "Não escolhemos favoritos, apenas consertamos logo!"
  indonesia.77.c: "Os cristãos precisam de nós!"
- indonesia.1000.t: "Parlamento Invadido"
+ indonesia.1000.t: "Parlamento invadido"
  indonesia.1000.d: "Meses de tumultos e confrontos finalmente nos levaram a este ponto... Nossos apoiadores e seguidores invadiram com sucesso o Parlamento Indonésio e exigiram que várias figuras-chave renunciassem, e todos obedeceram. O povo indonésio agora está livre da tirania eterna que era essa suposta democracia."
  indonesia.1000.a: "A Revolução tem Sucesso"
  indonesia.1001.t: "Cidade de Ambon sob controle cristão!"
@@ -739,15 +739,13 @@
  IND_back_muslims_d: "Apoiar os Muçulmanos"
  IND_crushed_gang_culture: "Esmagando a Cultura de Gangues"
  IND_equipped_police: "Polícia Militarizada"
- IND_kemdikibud_1: "O Kemdikibud"
- IND_kemdikibud_2: "O Kemdikibud"
  IND_komnas_ham: "KOMNAS-HAM"
  IND_guerilla: "Especialistas em Guerra de Guerrilha"
  IND_rural_aid: "Ajuda Rural"
  IND_rural_aid_2: "Ajuda Rural"
  IND_rural_aid_3: "Ajuda Rural"
  IND_rural_aid_4: "Ajuda Rural"
- IND_network_improvement: "Melhorias de Rede"
+ IND_network_improvement: "Melhorias na rede"
  IND_network_improvement_2: "Redes Eficientes"
  IND_network_improvement_3: "Redes Eficientes"
  IND_islamic_schools: "Políticas Islâmicas"
@@ -780,14 +778,14 @@
  indonesia.76854.a: "Vamos fazer isso"
  indonesia.76854.b: "Não."
  IND_disasters_mechanic: "A Má Sorte da Indonésia"
- IND_disasters_mechanic_desc: "A Indonésia tem muita sorte em ter uma abundância de recursos naturais, mão de obra e determinação para enfrentar o século XXI.\nNo entanto, a Indonésia enfrenta muitos desafios que impedem seu progresso. Acidentes são um tema comum, que poderiam ser facilmente evitados se houvesse um cuidado melhor para uma região específica.\n\nPor esse motivo, é nosso dever e responsabilidade prestar mais atenção aos nossos estados em tempo hábil para evitar um destino desastroso que nos causaria sérios danos.\n\nContinuaremos a ter desastres por um período considerável de tempo, no entanto, se os enfrentarmos rapidamente, eventualmente eles cessarão após algum tempo!"
+ IND_disasters_mechanic_desc: "A Indonésia tem muita sorte de ter uma abundância de recursos naturais, mão de obra e força de vontade para enfrentar o século XXI.\nNo entanto, §Ha Indonésia enfrenta muitos desafios§! que §Rimpedem o seu progresso§!. Os acidentes são um §Rtema comum§!, que seria facilmente prevenido se não fosse por um melhor cuidado para uma região específica.\n\nPor isso, é nosso dever e responsabilidade prestar mais atenção aos nossos estados em tempo hábil, a fim de evitar um destino desastroso que nos causaria sérios danos.\n\nContinuaremos a ter desastres por um período considerável de tempo, porém, se os enfrentarmos rapidamente, eles acabarão parando depois de algum tempo!"
  IND_back_muslim: "Apoiando os Muçulmanos"
- IND_back_muslim_desc: "Somos uma nação islâmica! Portanto, devemos proteger nossos muçulmanos, não importa o custo. Fazê-lo nos dará apoio popular e eliminará qualquer ódio em direção a nós na maioria islâmica de Sulewesi.\n\n\n\nA negociação é inestimável e deve começar imediatamente!"
- IND_muslim: "Negociar termos com os Muçulmanos em Sulewesi"
+ IND_back_muslim_desc: "Somos uma nação islâmica! Portanto, devemos proteger nossos muçulmanos, não importa o custo. Fazendo isso, ganharemos apoio popular e erradicaremos qualquer ódio contra nós na maioria islâmica de Sulawesi.\n\n\n\nA negociação é inestimável e deve começar imediatamente!"
+ IND_muslim: "Negociar termos com muçulmanos em Sulawesi"
  IND_muslim2: "Dar-lhes treinamento de combate adequado"
  IND_muslim3: "Estabelecer administradores locais"
  IND_muslim4: "Concluir as negociações"
- IND_muslim_generic: "Transferir milicianos para Sulewesi"
+ IND_muslim_generic: "Transferir milicianos para Sulawesi"
  IND_muslim_generic2: "Realocar projetos de construção cristãos"
  IND_muslim_generic3: "Fortificar Mesquitas"
  IND_back_papua: "Apoiando os Cristãos"
@@ -800,13 +798,13 @@
  IND_papua_generic2: "Realocar projetos de construção islâmica"
  IND_papua_generic3: "Fortificar Igrejas"
  IND_back_noone: "Não Apoiar Ninguém"
- IND_back_noone_desc: "É importante que o estado não escolha favoritos em questões sensíveis, como conflitos religiosos. Devemos iniciar o processo de amenizar essa tensão, tanto por meio de negociações quanto pela militarização de pontos de conflito.\n\nFazer isso trará mais calma aos sulewesianos e papuanos."
+ IND_back_noone_desc: "É importante que o estado escolha favoritos em questões sensíveis, como a de conflito religioso. Devemos começar o processo de aliviar essa tensão, tanto por meio de negociações quanto da militarização de pontos de conflito.\n\nFazer isso trará mais calma aos sulawesianos e papuas"
  IND_neutral: "Realizar comícios unificadores em vários estados"
- IND_neutral2: "Fundos para novas construções em Sulewesi"
+ IND_neutral2: "Fundos para novas construções em Sulawesi"
  IND_neutral3: "Fundos para igrejas papuanas"
  IND_neutral4: "Prometer melhor representação aos papuanos"
- IND_neutral5: "Prometer um cuidado melhor aos sulewesianos"
- IND_neutral_generic: "Estimular programas de alistamento para papuanos e sulewesianos"
+ IND_neutral5: "Prometa aos sulawesianos um melhor atendimento"
+ IND_neutral_generic: "Impulsionar programas de alistamento para papuas e sulawesianos"
  IND_neutral_generic2: "Militarizar portos usados para contrabando de armas"
  IND_neutral_generic3: "Militarizar pontos críticos conhecidos por conflitos"
  indonesia.41.t: "Desastre em Kalimantan!"
@@ -815,8 +813,8 @@
  indonesia.42.t: "Desastre em Papua Ocidental!"
  indonesia.42.d: "Nossas falhas em prover para o povo de Papua Ocidental resultaram em um acidente industrial que causou danos a várias instalações de produção."
  indonesia.42.a: "Era evitável!"
- indonesia.43.t: "Desastre em Molucas!"
- indonesia.43.d: "Nossas falhas em prover para o povo de Molucas resultaram em um conflito em um popular centro comercial, causando grande instabilidade na cidade!"
+ indonesia.43.t: "Desastre nas Molucas!"
+ indonesia.43.d: "Nossas falhas em atender às necessidades do povo das Molucas resultaram em uma briga em um shopping popular, um acidente que causou grande instabilidade na cidade!"
  indonesia.43.a: "Era evitável!"
  indonesia.44.t: "Desastre em Papua Ocidental!"
  indonesia.44.d: "Nossas falhas em prover para o povo de Kalimantan resultaram em um acidente industrial que causou danos a várias instalações de produção."
@@ -827,14 +825,14 @@
  indonesia.46.t: "Desastre em Sumatra do Norte!"
  indonesia.46.d: "Nossas falhas em prover para o povo de Sumatra do Norte resultaram em um acidente industrial que causou danos a várias instalações de produção."
  indonesia.46.a: "Era evitável!"
- indonesia.47.t: "Desastre em Sulewesi!"
- indonesia.47.d: "Nossas falhas em prover para o povo de Sulewesi resultaram em um acidente industrial que causou danos a várias instalações de produção."
+ indonesia.47.t: "Desastre em Sulawesi!"
+ indonesia.47.d: "Nossas falhas em atender às necessidades do povo de Sulawesi resultaram em um acidente industrial que causou danos a várias instalações de produção"
  indonesia.47.a: "Era evitável!"
  indonesia.48.t: "Desastre em Jacarta!"
  indonesia.48.d: "Nossas falhas em prover para o povo de Jacarta, nossa capital, resultaram em um acidente industrial que causou danos a várias instalações de produção."
  indonesia.48.a: "Era evitável!"
- indonesia.49.t: "Desastre em Molucas do Norte!"
- indonesia.49.d: "Nossas falhas em prover para o povo de Molucas do Norte resultaram em um acidente industrial que causou danos a várias instalações de produção."
+ indonesia.49.t: "Desastre nas Molucas do Norte!"
+ indonesia.49.d: "A nossa incapacidade de ajudar a população das Molucas do Norte resultou num acidente industrial que danificou várias instalações de produção"
  indonesia.49.a: "Era evitável!"
  indonesia.51.t: "Desastre nas Ilhas Lesser Sunda!"
  indonesia.51.d: "Nossas falhas em prover para o povo das Ilhas Lesser Sunda resultaram em um acidente industrial que causou danos a várias instalações de produção."
@@ -843,19 +841,19 @@
  indonesia.52.d: "Nossas falhas em prover para o povo das Ilhas Riau resultaram em um acidente industrial que causou danos a várias instalações de produção."
  indonesia.52.a: "Era evitável!"
  indonesia.53.t: "Desastre em Kalimantan!"
- indonesia.53.d: "Nossas falhas em prover para o povo de Kalimantan resultaram em um acidente aéreo, causando danos significativos no aeroporto provincial!"
+ indonesia.53.d: "Nossa falha em atender às pessoas de Kalimantan resultou em um acidente de aviação, causando grandes danos ao aeroporto provincial!"
  indonesia.53.a: "Era evitável!"
  indonesia.54.t: "Desastre em Sumatra do Sul!"
  indonesia.54.d: "Nossas falhas em prover para o povo de Sumatra do Sul resultaram em um acidente industrial que causou danos a várias instalações de produção."
  indonesia.54.a: "Era evitável!"
  indonesia.56.t: "Desastre em Papua Ocidental!"
- indonesia.56.d: "Nossas falhas em prover para o povo de Papua Ocidental resultaram em um acidente aéreo, causando danos significativos no aeroporto provincial!"
+ indonesia.56.d: "Nossas falhas em atender às pessoas da Papua Ocidental resultaram em um acidente de aviação, causando grandes danos ao aeroporto provincial!"
  indonesia.56.a: "Era evitável!"
- indonesia.57.t: "Desastre em Sulewesi!"
- indonesia.57.d: "Nossas falhas em construir infraestrutura adequada em Sulewesi causaram o colapso de vários prédios, resultando na morte de muitos de nossos cidadãos."
+ indonesia.57.t: "Desastre em Sulawesi!"
+ indonesia.57.d: "Nossas falhas em construir infraestrutura adequada em Sulawesi causaram o colapso de vários edifícios e a morte de muitas pessoas."
  indonesia.57.a: "Era evitável!"
  indonesia.58.t: "Desastre em Papua Ocidental!"
- indonesia.58.d: "Nossas falhas em fornecer gerenciamento adequado para Papua Ocidental resultaram em um incidente onde uma de nossas fábricas militares desabou."
+ indonesia.58.d: "As nossas falhas em fornecer uma gestão adequada para a Papua Ocidental resultaram num incidente em que uma das nossas fábricas militares ruiu"
  indonesia.58.a: "Era evitável!"
  indonesia.59.t: "Desastre em Papua!"
  indonesia.59.d: "Nossas falhas em fornecer infraestrutura adequada em Papua Ocidental resultaram em um acidente industrial que causou danos a várias instalações de produção militar."
@@ -867,7 +865,7 @@
  indonesia.62.d: "Nossas falhas em prover para o povo de Java Ocidental, também lar de nossa capital, levaram a um incidente onde uma fábrica industrial desabou."
  indonesia.62.a: "Era evitável!"
  indonesia.63.t: "Desastre nos céus!"
- indonesia.63.d: "Nossas falhas em fornecer equipamentos de aviação adequados levaram a falhas técnicas em um de nossos voos, resultando em muitas mortes!"
+ indonesia.63.d: "Nossas falhas em fornecer equipamentos de aviação adequados levaram a falhas técnicas em um de nossos voos, causando muitas mortes!"
  indonesia.63.a: "Era evitável!"
  indonesia.64.t: "Desastre em nossa Capital!"
  indonesia.64.d: "Nossas falhas em prover para o povo de Java Ocidental, também lar de nossa capital, levaram a um incidente onde várias fábricas industriais desabaram."
@@ -920,12 +918,12 @@
  IND_papua_resist3: "Resistência Cristã de Papua"
  IND_papua_resist4: "Resistência Cristã de Papua"
  IND_papua_resist_info: "Os cristãos de nossa terra residem principalmente em Papua. Infelizmente, eles têm sido alvo de abusos por parte de governos passados e atuais, e os habitantes não gostam de nós, o que torna nossas missões políticas lá um verdadeiro desafio."
- IND_islamic_resist: "Resistência Muçulmana Sulewesiana"
- IND_islamic_resist2: "Resistência Muçulmana Sulewesiana"
- IND_islamic_resist3: "Resistência Muçulmana Sulewesiana"
- IND_islamic_resist4: "Resistência Muçulmana Sulewesiana"
- IND_islamic_resist_c1: "Resistência Mínima Muçulmana Sulewesiana"
- IND_islamic_resist_info: "Sulawesi é uma de nossas maiores ilhas, e é habitada por muitos povos diferentes. No entanto, a grande maioria muçulmana está criticando o estado por negligência e está oferecendo resistência pesada contra grande parte de nossas forças e economia. Essa resistência está tornando a vida de nossos homens e forças de segurança muito difícil."
+ IND_islamic_resist: "Resistência muçulmana de Sulawesia"
+ IND_islamic_resist2: "Resistência muçulmana de Sulawesia"
+ IND_islamic_resist3: "Resistência muçulmana de Sulawesia"
+ IND_islamic_resist4: "Resistência muçulmana de Sulawesia"
+ IND_islamic_resist_c1: "Resistência muçulmana mínima de Sulawesia"
+ IND_islamic_resist_info: "Sulawesi é uma das nossas maiores ilhas, e é preenchida com muitos povos diferentes. No entanto, a grande maioria muçulmana está chamando o estado de negligência e está colocando forte resistência contra muitas de nossas forças e economia. Essa resistência está tornando a vida muito difícil para nossos homens e forças de segurança."
  IND_IND_Aceh_insurgency_from_level_1_to_level_2: "Modificar §YA Insurgência em Aceh§! por \nReganho de Organização: §G+10%§! \nVelocidade de Crescimento da Resistência: §G-5%§!\nConformidade: §G+5%§!\nMáx. Indústrias no Estado: §G+50%§!\nVelocidade das Divisões: §G+5%§! \n"
  IND_IND_Aceh_insurgency_from_level_2_to_level_3: "Modificar §YA Insurgência em Aceh§! por \nReganho de Organização: §G+2%§! \nVelocidade de Crescimento da Resistência: §G-5%§!\nConformidade §G+5%§!\nMáx. Indústrias no Estado: §G+15%§!\nVelocidade das Divisões: §G+20%§! \n"
  IND_IND_Aceh_insurgency_from_level_3_to_level_4: "Modificar §YA Insurgência em Aceh§! por \nReganho de Organização: §G+1%§! \nVelocidade de Crescimento da Resistência: §G-3%§!\nConformidade §G+2%§!\nMáx. Indústrias no Estado: §G+5%§!\n"
@@ -951,3 +949,5 @@
  indonesian_caliphate: "Califado Indonésio se Expande!"
  indonesia_confront_australia_threat: "Indonésia Ameaça a Austrália por Timor-Leste!"
  IND_our_policies_tt: "Devemos preencher §Y$IND_new_capital$§! ou §Y$IND_new_silkroad$§!"
+ IND_grasberg_mine_exploitation: "Exploração da Mina Grasberg"
+ IND_grasberg_mine_exploitation_desc: "A Mina Grasberg na Papua Ocidental é uma das maiores minas de ouro e cobre do mundo. Devemos expandir e explorar as reservas na área para melhor trazer a Indonésia para o mercado de metais preciosos."
