--- a/localisation/braz_por/MD_internal_factions_l_braz_por.yml
+++ b/localisation/braz_por/MD_internal_factions_l_braz_por.yml
@@ -494,7 +494,7 @@
  internal_factions_events.13.a: "Triste"
  internal_factions_events.13.b: "Subsidiar a Empresa."
  internal_factions_events.14.t: "$labour_unions$ Exigem Aumento de Salários"
- internal_factions_events.14.d: "$labour_unions$ está exigindo que as empresas e os conglomerados industriais da nossa nação sejam forçados a aumentar os salários dos trabalhadores."
+ internal_factions_events.14.d: "Os $labour_unions$ agora estão exigindo que as empresas e os conglomerados industriais de nossa nação sejam forçados a aumentar os salários dos trabalhadores."
  internal_factions_events.14.a: "Apoiar as Empresas."
  internal_factions_events.14.b: "Apoiar os Sindicatos."
  internal_factions_events.14.c: "Nenhum dos dois."
