--- a/localisation/french/MD_internal_factions_l_french.yml
+++ b/localisation/french/MD_internal_factions_l_french.yml
@@ -494,7 +494,7 @@
  internal_factions_events.13.a: "triste"
  internal_factions_events.13.b: "Subventionner l'entreprise."
  internal_factions_events.14.t: "$labour_unions$ exige des augmentations de salaire"
- internal_factions_events.14.d: "$labour_unions$ exige que les entreprises et les conglomérats industriels de notre pays soient contraints d'augmenter les salaires des travailleurs."
+ internal_factions_events.14.d: "$labour_unions$ exigent désormais que les entreprises et les conglomérats industriels de notre pays soient obligés d’augmenter les salaires des travailleurs."
  internal_factions_events.14.a: "Soutenir les entreprises."
  internal_factions_events.14.b: "Soutenir les syndicats."
  internal_factions_events.14.c: "Ni l'un ni l'autre."
