--- a/localisation/polish/MD_focus_FRA_l_polish.yml
+++ b/localisation/polish/MD_focus_FRA_l_polish.yml
@@ -379,8 +379,7 @@
  FRA_operation_serval: "Operacja Serval"
  FRA_operation_serval_desc: "Opération Serval to pseudonim używany w odniesieniu do serii interwencji pod przewodnictwem Francji i Mali podczas wojny domowej w Mali, stanowiących pierwszy etap konfliktu z islamskimi ekstremistami w regionie."
  FRA_French_pillar_of_counterterrorism: "Filar antyterroryzmu"
- FRA_French_pillar_of_counterterrorism_desc: "Nasze siły antyterrorystyczne i antyekstremistyczne zyskały światową sławę, a my staliśmy się filarem i twarzą walki z terroryzmem."
- FRA_french_pillar_of_counterterroism_tt: "Wysyłamy §YDoradców Zagranicznych§! do Narodów w §YCelach zwalczania terroryzmu§! nasi doradcy podwajają premię przekazywaną §YNarodowi Poradnemu§!."
+ FRA_French_pillar_of_counterterrorism_desc: "Nasze siły antyterrorystyczne i antyekstremistyczne zyskały światową sławę, a my staliśmy się filarem i twarzą walki z terroryzmem na całym globie."
  FRA_the_french_foreign_legion: "Francuska Legia Cudzoziemska"
  FRA_the_french_foreign_legion_desc: "Francuska Legia Cudzoziemska to elitarny korpus armii francuskiej, składający się z różnych specjalizacji. Utworzona w 1831 roku przez ówczesnego króla Ludwika Filipa, miała zapewnić zagranicznym rekrutom miejsce wśród sił francuskich. Jako taki Legion jest wieloetniczną i wielokulturową siłą bojową, znaną na całym świecie ze swojej dyscypliny i esprit de corps."
  FRA_sahel_support_initiative: "Inicjatywa na rzecz wsparcia Sahelu"
@@ -750,3 +749,4 @@
  FRA_idea_communist_revolution1_desc: "Ognie rewolucji płoną coraz jaśniej, gdy koła czasu wciąż się zmieniają. Musimy starać się podsycić ten ogień, kontynuując rewolucję w kraju i za granicą."
  FRA_idea_communist_revolution2: "Wielkie pożary rewolucji"
  FRA_idea_communist_revolution2_desc: "Rewolucja wkrótce zmiecie świat w imię przyszłości ludzkości."
+ FRA_french_pillar_of_counterterrorism_tt: "Wysyłamy §YDoradców Zagranicznych§! do Narodów w §YCelach zwalczania terroryzmu§! nasi doradcy podwajają premię przekazywaną §YNarodowi Poradnemu§!."
