--- a/localisation/polish/MD_focus_IND_l_polish.yml
+++ b/localisation/polish/MD_focus_IND_l_polish.yml
@@ -7,7 +7,7 @@
  IND_japanese_aid: "Wezwij pomoc japońską"
  IND_japanese_aid_desc: "Pomimo naszych różnic podczas drugiej wojny światowej, Japonia okazała się dla nas dość życzliwa w naszych kłopotach gospodarczych. Powinniśmy skontaktować się z nimi i ich zachodnimi sojusznikami, aby pomogli nam w tej sytuacji"
  IND_japanese_aid_jica: "JICA"
- IND_japanese_aid_jica_desc: "JICA, znana również jako Japońska Agencja Współpracy Międzynarodowej, może być bardzo użyteczną organizacją pomagającą w rozwoju infrastruktury i dróg w naszym kraju"
+ IND_japanese_aid_jica_desc: "JICA, znana również jako Japońska Agencja Współpracy Międzynarodowej, może być bardzo użyteczną organizacją, która pomoże w rozwoju infrastruktury i dróg naszego kraju"
  IND_japanese_aid_metro_invest: "Inwestycje w japońskie metro"
  IND_japanese_aid_metro_invest_desc: "Nasi ludzie muszą szybko poruszać się po kraju, a dzięki technologii japońskiego metra i inwestycjom możemy osiągnąć ten nasz cel"
  IND_japanese_aid_java_airport: "Lotniska w zachodniej Jawie"
@@ -739,8 +739,6 @@
  IND_back_muslims_d: "Popierajcie muzułmanów"
  IND_crushed_gang_culture: "Miażdżąca kultura gangów"
  IND_equipped_police: "Zmilitaryzowana policja"
- IND_kemdikibud_1: "Kemdikibud"
- IND_kemdikibud_2: "Kemdikibud"
  IND_komnas_ham: "KOMNAS-HAM"
  IND_guerilla: "Eksperci od wojny partyzanckiej"
  IND_rural_aid: "Pomoc wiejska"
@@ -780,14 +778,14 @@
  indonesia.76854.a: "Zróbmy to"
  indonesia.76854.b: "NIE"
  IND_disasters_mechanic: "Straszne szczęście Indonezji"
- IND_disasters_mechanic_desc: "Indonezja ma szczęście, że dysponuje obfitością zasobów naturalnych, siły roboczej i siły woli, aby móc przetrwać XXI wiek.\nJednak §HIndonezja stoi przed wieloma wyzwaniami§! że §Rhamuje jego postęp§!. Wypadki są §Rwspólnym tematem§!, którym można by łatwo zapobiec, gdyby nie lepsza opieka nad danym regionem\n\nZ tego powodu naszym obowiązkiem i odpowiedzialnością jest terminowe zwracanie większej uwagi na nasze stany aby uniknąć katastrofalnego losu, który wyrządziłby nam poważną krzywdę\n\nBędziemy doświadczać katastrof przez dłuższy czas, jednak jeśli szybko sobie z nimi poradzimy, po pewnym czasie w końcu ustaną!"
+ IND_disasters_mechanic_desc: "Indonezja ma szczęście, że dysponuje obfitością zasobów naturalnych, siły roboczej i siły woli, aby móc przetrwać XXI wiek.\nJednak §HIndonezja stoi przed wieloma wyzwaniami§! że §Rhamuje jego postęp§!. Wypadki są §Rwspólnym tematem§!, którym można by łatwo zapobiec, gdyby nie lepsza opieka nad danym regionem\n\nZ tego powodu naszym obowiązkiem i odpowiedzialnością jest poświęcenie większej uwagi naszym państwom w odpowiednim czasie, aby uniknąć katastrofalnego losu, który mógłby wyrządzić nam poważną krzywdę\n\nBędziemy doświadczać katastrof przez dłuższy czas, jednak jeśli szybko sobie z nimi poradzimy, po pewnym czasie w końcu ustaną!"
  IND_back_muslim: "Wspieranie muzułmanów"
- IND_back_muslim_desc: "Jesteśmy narodem islamskim! Dlatego musimy chronić naszych muzułmanów za wszelką cenę. Dzięki temu zyskamy poparcie społeczne i wykorzenimy wszelką nienawiść wobec nas w większości islamskiej. Sulewesi\n\n\n\nNegocjacje są bezcenne i należy je natychmiast rozpocząć!"
- IND_muslim: "Negocjuj warunki z muzułmanami w Sulewesi"
+ IND_back_muslim_desc: "Jesteśmy narodem islamskim! Dlatego musimy chronić naszych muzułmanów bez względu na koszty. Dzięki temu zyskamy poparcie społeczne i wykorzenimy wszelką nienawiść do nas w muzułmańskiej większości Sulawesi\n\n\n\nNegocjacje są bezcenne i należy je rozpocząć natychmiast!"
+ IND_muslim: "Negocjuj warunki z muzułmanami w Sulawesi"
  IND_muslim2: "Zapewnij im odpowiednie szkolenie bojowe"
  IND_muslim3: "Skonfiguruj administratorów lokalnych"
  IND_muslim4: "Zakończ negocjacje"
- IND_muslim_generic: "Przenieść milicjantów do Sulewesi"
+ IND_muslim_generic: "Przeniesienie milicjantów do Sulawesi"
  IND_muslim_generic2: "Przenoszenie chrześcijańskich projektów budowlanych"
  IND_muslim_generic3: "Wzmacniać meczety"
  IND_back_papua: "Wspieranie chrześcijan"
@@ -800,13 +798,13 @@
  IND_papua_generic2: "Przenoszenie islamskich projektów budowlanych"
  IND_papua_generic3: "Umacniać kościoły"
  IND_back_noone: "Nie popieram nikogo"
- IND_back_noone_desc: "Ważne jest, aby państwo rzeczywiście wybierało faworytów w sprawach drażliwych, takich jak konflikty religijne. Musimy rozpocząć proces łagodzenia tego napięcia, zarówno poprzez negocjacje, jak i militaryzację punktów konfliktu. \n\nDzięki temu Sulewezom i Papuasom będzie spokojniej"
+ IND_back_noone_desc: "Ważne jest, aby państwo rzeczywiście wybierało faworytów w kwestiach wrażliwych, takich jak konflikt religijny. Musimy rozpocząć proces łagodzenia tego napięcia, zarówno poprzez negocjacje, jak i militaryzację punktów konfliktu.\n\nDzięki temu mieszkańcy Sulawesu i Papuasów zaznają większego spokoju"
  IND_neutral: "Organizuj wiece jednoczące w różnych stanach"
- IND_neutral2: "Fundusze na nową budowę w Sulewesi"
+ IND_neutral2: "Środki na nowe budownictwo w Sulawesi"
  IND_neutral3: "Fundusze kościołów papuaskich"
  IND_neutral4: "Obiecaj Papuasom lepszą reprezentację"
- IND_neutral5: "Obiecaj lepszą opiekę Sulewesjanowi"
- IND_neutral_generic: "Należy forsować programy werbowania Papuasów i Sulewezów"
+ IND_neutral5: "Obiecujemy mieszkańcom Sulawesi lepszą opiekę"
+ IND_neutral_generic: "Wspieranie programów rekrutacyjnych dla Papuasów i Sulawesczyków"
  IND_neutral_generic2: "Zmilitaryzować doki wykorzystywane do przemytu broni"
  IND_neutral_generic3: "Zmilitaryzuj hotspoty znane z starć"
  indonesia.41.t: "Katastrofa w Kalimantanie!"
@@ -815,8 +813,8 @@
  indonesia.42.t: "Katastrofa w Papui Zachodniej!"
  indonesia.42.d: "Nasze zaniedbania w zapewnieniu ludności Papui Zachodniej doprowadziły do ​​awarii przemysłowej, która doprowadziła do zniszczenia kilku zakładów produkcyjnych"
  indonesia.42.a: "Można było temu zapobiec!"
- indonesia.43.t: "Katastrofa w Moluccus!"
- indonesia.43.d: "Nasze zaniedbania w zapewnieniu mieszkańcom Moluccus doprowadziły do ​​bójki w popularnym centrum handlowym i wypadku prowadzącego do poważnej niestabilności w mieście!"
+ indonesia.43.t: "Katastrofa na Molukach!"
+ indonesia.43.d: "Nasze zaniedbania w zapewnieniu pomocy mieszkańcom Moluków doprowadziły do ​​bójki w popularnym centrum handlowym, a wypadek wywołał poważną niestabilność w mieście!"
  indonesia.43.a: "Można było temu zapobiec!"
  indonesia.44.t: "Katastrofa w Papui Zachodniej!"
  indonesia.44.d: "Nasze zaniedbania w zapewnieniu ludności Kalimantanu doprowadziły do ​​awarii przemysłowej, która doprowadziła do zniszczenia kilku zakładów produkcyjnych"
@@ -827,14 +825,14 @@
  indonesia.46.t: "Katastrofa na Północnej Sumatrze!"
  indonesia.46.d: "Nasze zaniedbania w zapewnieniu mieszkańcom Północnej Sumatry doprowadziły do ​​wypadku przemysłowego, który spowodował uszkodzenie kilku zakładów produkcyjnych"
  indonesia.46.a: "Można było temu zapobiec!"
- indonesia.47.t: "Katastrofa w Sulewesi!"
- indonesia.47.d: "Nasze zaniedbania w zapewnieniu ludności Sulewesi doprowadziły do ​​awarii przemysłowej, która doprowadziła do zniszczenia kilku zakładów produkcyjnych"
+ indonesia.47.t: "Katastrofa w Sulawesi!"
+ indonesia.47.d: "Nasze zaniedbania w zapewnieniu pomocy mieszkańcom Sulawesi doprowadziły do ​​wypadku przemysłowego, w wyniku którego uszkodzeniu uległo kilka zakładów produkcyjnych"
  indonesia.47.a: "Można było temu zapobiec!"
  indonesia.48.t: "Katastrofa w Dżakarcie!"
  indonesia.48.d: "Nasze zaniedbania w zapewnieniu mieszkańcom Dżakarty, naszej stolicy, doprowadziły do ​​awarii przemysłowej, która doprowadziła do zniszczenia kilku zakładów produkcyjnych"
  indonesia.48.a: "Można było temu zapobiec!"
- indonesia.49.t: "Katastrofa w Północnym Moluku!"
- indonesia.49.d: "Nasze zaniedbania w zapewnieniu ludności Północnego Moluccus doprowadziły do ​​wypadku przemysłowego, który spowodował uszkodzenie kilku zakładów produkcyjnych"
+ indonesia.49.t: "Katastrofa w Północnych Molukach!"
+ indonesia.49.d: "Nasze zaniedbania w zakresie zapewnienia pomocy mieszkańcom Północnych Moluków doprowadziły do ​​wypadku przemysłowego, w wyniku którego uszkodzeniu uległo kilka zakładów produkcyjnych"
  indonesia.49.a: "Można było temu zapobiec!"
  indonesia.51.t: "Katastrofa na Małych Wyspach Sundajskich!"
  indonesia.51.d: "Nasze zaniedbania w zapewnieniu ludności Małych Wysp Sundajskich doprowadziły do ​​awarii przemysłowej, która doprowadziła do zniszczenia kilku zakładów produkcyjnych"
@@ -843,19 +841,19 @@
  indonesia.52.d: "Nasze niepowodzenia w zapewnieniu ludności Wysp Riau. spowodowała awarię przemysłową, która doprowadziła do zniszczenia kilku zakładów produkcyjnych"
  indonesia.52.a: "Można było temu zapobiec!"
  indonesia.53.t: "Katastrofa w Kalimantanie!"
- indonesia.53.d: "Nasze zaniedbania w zapewnieniu mieszkańcom Kalimantanu doprowadziły do ​​wypadku lotniczego, który spowodował poważne zniszczenia na prowincjonalnym lotnisku!"
+ indonesia.53.d: "Nasze zaniedbania w zapewnieniu pomocy mieszkańcom Kalimantanu doprowadziły do ​​wypadku lotniczego, w którym doszło do poważnych uszkodzeń lotniska prowincjonalnego!"
  indonesia.53.a: "Można było temu zapobiec!"
  indonesia.54.t: "Katastrofa na Sumatrze Południowej!"
  indonesia.54.d: "Nasze zaniedbania w zapewnieniu ludności Sumatry Południowej doprowadziły do ​​awarii przemysłowej, która doprowadziła do zniszczenia kilku zakładów produkcyjnych"
  indonesia.54.a: "Można było temu zapobiec!"
  indonesia.56.t: "Katastrofa w Papui Zachodniej!"
- indonesia.56.d: "Nasze zaniedbania w zapewnieniu ludności Papui Zachodniej doprowadziły do ​​wypadku lotniczego, powodując poważne zniszczenia na prowincjonalnym lotnisku!"
+ indonesia.56.d: "Nasze zaniedbania w zakresie zapewnienia pomocy mieszkańcom Papui Zachodniej doprowadziły do ​​wypadku lotniczego, w wyniku którego lotnisko prowincjonalne uległo poważnym uszkodzeniom!"
  indonesia.56.a: "Można było temu zapobiec!"
- indonesia.57.t: "Katastrofa w Sulewesi!"
- indonesia.57.d: "Nasze niepowodzenia w budowie odpowiedniej infrastruktury w Sulewesi spowodowały zawalenie się kilku budynków i śmierć wielu naszych ludzi"
+ indonesia.57.t: "Katastrofa w Sulawesi!"
+ indonesia.57.d: "Nasze zaniedbania w zakresie budowy odpowiedniej infrastruktury na Sulawesi spowodowały zawalenie się kilku budynków i śmierć wielu naszych obywateli"
  indonesia.57.a: "Można było temu zapobiec!"
  indonesia.58.t: "Katastrofa w Papui Zachodniej!"
- indonesia.58.d: "Nasze zaniedbania w zapewnieniu odpowiedniego zarządzania Papuą Zachodnią doprowadziły do ​​incydentu, w wyniku którego zawaliła się jedna z naszych fabryk wojskowych"
+ indonesia.58.d: "Nasze zaniedbania w zakresie zapewnienia odpowiedniego zarządzania Papuą Zachodnią doprowadziły do ​​incydentu, w którym zawaliła się jedna z naszych fabryk wojskowych"
  indonesia.58.a: "Można było temu zapobiec!"
  indonesia.59.t: "Katastrofa w Papui!"
  indonesia.59.d: "Nasze zaniedbania w zapewnieniu infrastruktury Papui Zachodniej doprowadziły do ​​awarii przemysłowej, która doprowadziła do zniszczenia kilku wojskowych zakładów produkcyjnych"
@@ -867,7 +865,7 @@
  indonesia.62.d: "Nasze zaniedbania w zapewnieniu bytu mieszkańcom Zachodniej Jawy, będącej także siedzibą naszej stolicy, doprowadziły do ​​incydentu, w wyniku którego zawaliła się fabryka przemysłowa"
  indonesia.62.a: "Można było temu zapobiec!"
  indonesia.63.t: "Katastrofa na niebie!"
- indonesia.63.d: "Nasze zaniedbania w zapewnieniu odpowiedniego sprzętu lotniczego doprowadziły do ​​awarii technicznych podczas jednego z naszych lotów, w wyniku czego wiele osób zginęło!"
+ indonesia.63.d: "Nasze zaniedbania w zapewnieniu odpowiedniego sprzętu lotniczego doprowadziły do ​​awarii technicznej podczas jednego z naszych lotów, w wyniku której zginęło wiele osób!"
  indonesia.63.a: "Można było temu zapobiec!"
  indonesia.64.t: "Katastrofa w naszej stolicy!!"
  indonesia.64.d: "Nasze zaniedbania w zapewnieniu bytu mieszkańcom Zachodniej Jawy, będącej także siedzibą naszej stolicy, doprowadziły do ​​incydentu, w wyniku którego upadło kilka fabryk przemysłowych"
@@ -920,12 +918,12 @@
  IND_papua_resist3: "Ruch oporu papuasów"
  IND_papua_resist4: "Ruch oporu papuasów"
  IND_papua_resist_info: "Chrześcijanie naszej ziemi zamieszkują głównie Papuę. Niestety, były one obiektem nadużyć ze strony poprzednich i obecnych rządów, a mieszkańcy bardzo nas nie lubią, co sprawia, że ​​nasza misja polityczna w tym kraju jest prawdziwym wyzwaniem"
- IND_islamic_resist: "Sulewskiego muzułmańskiego ruchu oporu"
- IND_islamic_resist2: "Sulewskiego muzułmańskiego ruchu oporu"
- IND_islamic_resist3: "Sulewskiego muzułmańskiego ruchu oporu"
- IND_islamic_resist4: "Sulewskiego muzułmańskiego ruchu oporu"
- IND_islamic_resist_c1: "Minimalny opór sulewezyjskich muzułmanów"
- IND_islamic_resist_info: "Sulewesi jest jedną z naszych największych wysp i jest wypełniona wieloma różnymi ludami. Jednakże zdecydowana większość muzułmanów potępia państwo za zaniedbanie i stawia zaciekły opór większości naszych sił i gospodarki. Ten opór bardzo utrudnia życie naszym ludziom i siłom bezpieczeństwa"
+ IND_islamic_resist: "Muzułmański opór Sulawesii"
+ IND_islamic_resist2: "Muzułmański opór Sulawesii"
+ IND_islamic_resist3: "Muzułmański opór Sulawesii"
+ IND_islamic_resist4: "Muzułmański opór Sulawesii"
+ IND_islamic_resist_c1: "Minimalny opór muzułmanów z Sulawesi"
+ IND_islamic_resist_info: "Sulawesi jest jedną z naszych największych wysp i zamieszkuje ją wiele różnych ludów. Jednak duża muzułmańska większość wzywa państwo do zaniedbania i stawia silny opór większości naszych sił i gospodarki. Ten opór bardzo utrudnia życie naszym ludziom i siłom bezpieczeństwa."
  IND_IND_Aceh_insurgency_from_level_1_to_level_2: "Zmodyfikuj §YPowstanie w Acehu§! przez \nOrganizacja Odzyskaj: §G+10%§! \nSzybkość wzrostu oporu: §G-5%§!\nZgodność: §G+5%§!\nMaksymalna liczba branż w stanie: §G+50%§!\nSzybkość dywizji: §G+5%§! \N"
  IND_IND_Aceh_insurgency_from_level_2_to_level_3: "Zmodyfikuj §YPowstanie w Acehu§! przez \nOrganizacja Odzyskaj: §G+2%§! \nSzybkość wzrostu oporu: §G-5%§!\nZgodność §G+5%§!\nMaksymalna liczba branż w stanie: §G+15%§!\nSzybkość dywizji: §G+20%§! \N"
  IND_IND_Aceh_insurgency_from_level_3_to_level_4: "Zmodyfikuj §YPowstanie w Acehu§! przez \nOrganizacja Odzyskaj: §G+1%§! \nSzybkość wzrostu oporu: §G-3%§!\nZgodność §G+2%§!\nMaksymalna liczba branż w stanie: §G+5%§!\n"
@@ -951,3 +949,5 @@
  indonesian_caliphate: "Indonezyjski kalifat się rozwija!"
  indonesia_confront_australia_threat: "Indonezja grozi Australii w sprawie Timoru Wschodniego!"
  IND_our_policies_tt: "Musimy ukończyć §Y$IND_new_capital$§! lub §Y$IND_new_silkroad$§!"
+ IND_grasberg_mine_exploitation: "Eksploatacja kopalni Grasberg"
+ IND_grasberg_mine_exploitation_desc: "Kopalnia Grasberg w Zachodniej Papui jest jedną z największych kopalni złota i miedzi na świecie. Powinniśmy rozszerzyć i wykorzystać rezerwy w tym obszarze, aby lepiej wprowadzić Indonezję na rynek metali szlachetnych."
