--- a/localisation/polish/MD_focus_SOV_l_polish.yml
+++ b/localisation/polish/MD_focus_SOV_l_polish.yml
@@ -4644,11 +4644,11 @@
  georgia_broken_relations: "Zrujnowane stosunki z Gruzją"
  SOV_Georgian_question: "Losy Gruzji"
  SOV_Georgian_question_desc: "W tej chwili głównym zadaniem naszej polityki zagranicznej jest jak najszybsze rozwiązanie kwestii dalszych interakcji z Gruzją"
- SOV_separ_povoljie_open: "§RSeparatism§! in the §YVolga Region§!: §GOpen§!"
- SOV_separ_povoljie_close: "§RSeparatism§! in the §YVolga Region§!: §RClose§!"
- SOV_anti_mariel_separ: "§RSuppress§! §Y[MEL.GetNameWithFlag] Separatism§! Through The Media"
- SOV_anti_mariel_separ_rosguard: "§RSuppress§! §Y[MEL.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
- SOV_anti_mariel_separ_fsb: "§RSuppress§! §Y[MEL.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_separ_povoljie_open: "§RSepartystyczne ruchy§! w §YRegionie Wołgi§!: §GOtwarte§!"
+ SOV_separ_povoljie_close: "§RSepartystyczne ruchy§! w §YRegionie Wołgi§!: §RZamknięte§!"
+ SOV_anti_mariel_separ: "§RStłum§! §Y[MEL.GetNameWithFlag] Separatyzm§! Przez Media"
+ SOV_anti_mariel_separ_rosguard: "§RStłum§! §Y[MEL.GetNameWithFlag] Separatyzm§! Przy Pomocy Rosgwardii\n\n\n"
+ SOV_anti_mariel_separ_fsb: "§RStłum§! §Y[MEL.GetNameWithFlag] Separatyzm§! Przy Pomocy FSB"
  SOV_anti_mordov_separ: "§RSuppress§! §Y[MOV.GetNameWithFlag] Separatism§! Through The Media"
  SOV_anti_mordov_separ_rosguard: "§RSuppress§! §Y[MOV.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
  SOV_anti_mordov_separ_fsb: "§RSuppress§! §Y[MOV.GetNameWithFlag] Separatism§! With The Help of FSB"
