--- a/localisation/polish/MD_subideology_parties_l_polish.yml
+++ b/localisation/polish/MD_subideology_parties_l_polish.yml
@@ -6270,7 +6270,7 @@
  LIB.neutral_Social: "£LIB_neutral_Social_small (UPP) - United People's Party"
  LIB.neutral_Social_desc: "(African Socialism) - The United People's Party is a African socialist party. African socialism includes many elements of Marxism-Leninism, but rejects concepts such as anti-religion, class struggle and a violent revolution. Many of its members defected to the LURD rebel group to oppose Taylor, including Sekou Conneh, the leader of the rebels."
  LIB.Neutral_Autocracy: "£generic_Neutral_Autocracy_small (FAPL) - Freedom Alliance Party of Liberia"
- LIB.Nat_Autocracy: "£LIB_Nat_Autocracy_small (AFL) - Armed Forces of Liberia"
+ LIB.Nat_Autocracy: "£LIB_Nat_Autocracy_small (AFL) - Siły Zbrojne Liberii"
  LIB.Nat_Autocracy_icon: "£LIB_Nat_Autocracy_small"
  LIB.Nat_Autocracy_desc: "(Military Junta) - After Taylor's rise to power, he essentially gutted the personnel of the AFL, favouring his personal militia 'Anti-Terrorist Unit' instead. By early 2000s, the AFL has been reduced to a state non-existence in practice, with Taylor having retired the majority of personnel."
  LIT.conservatism: "£LIT_conservatism Tevynes Sajunga - Lietuvos Krikscionys Demokratai (TS-LKD)"
