--- a/localisation/russian/MD_focus_FRA_l_russian.yml
+++ b/localisation/russian/MD_focus_FRA_l_russian.yml
@@ -379,8 +379,7 @@
  FRA_operation_serval: "Opération Serval"
  FRA_operation_serval_desc: "Операция \"Сервал\" - это название серии операций, проведенных под руководством Франции и Мали во время гражданской войны в Мали в качестве первого этапа конфликта против исламских экстремистов в регионе."
  FRA_French_pillar_of_counterterrorism: "Столп борьбы с терроризмом"
- FRA_French_pillar_of_counterterrorism_desc: "Наши антитеррористические и антиэкстремистские силы получили мировую известность, и мы стали опорой и лицом борьбы с терроризмом по всему миру."
- FRA_french_pillar_of_counterterroism_tt: "Отправляя §Yиностранных советников§! в страны для §Yконтртеррористических целей§! наши советники удваивают бонус, предоставляемый §Yстране-советнику§!."
+ FRA_French_pillar_of_counterterrorism_desc: "Наши антитеррористические и антиэкстремистские силы приобрели мировую известность, и мы стали опорой и лицом борьбы с терроризмом во всем мире."
  FRA_the_french_foreign_legion: "Французский иностранный легион"
  FRA_the_french_foreign_legion_desc: "Французский иностранный легион - это элитный корпус французской армии, состоящий из представителей различных специальностей. Он был сформирован в 1831 году по приказу короля Луи Филиппа, чтобы дать возможность иностранным рекрутам занять место в рядах французских войск. Легион представляет собой многонациональную и многокультурную боевую силу, которая известна во всем мире своей дисциплиной и чувством собственного достоинства."
  FRA_sahel_support_initiative: "Инициатива по поддержке Сахеля"
@@ -750,3 +749,4 @@
  FRA_idea_communist_revolution1_desc: "Огонь революции горит все ярче, поскольку колесо времени продолжает меняться. Мы должны стремиться разжечь это пламя, проводя революцию здесь, дома и за рубежом."
  FRA_idea_communist_revolution2: "Великие огни революции"
  FRA_idea_communist_revolution2_desc: "Революция вот-вот охватит мир ради будущего человечества."
+ FRA_french_pillar_of_counterterrorism_tt: "Отправляя §Yиностранных советников§! в страны для §Yконтртеррористических целей§! наши советники удваивают бонус, предоставляемый §Yстране-советнику§!."
