--- a/localisation/russian/MD_focus_IND_l_russian.yml
+++ b/localisation/russian/MD_focus_IND_l_russian.yml
@@ -7,7 +7,7 @@
  IND_japanese_aid: "Призвать Японию помочь нам"
  IND_japanese_aid_desc: "Несмотря на наши разногласия во времена второй мировой войны, Япония была довольно добра к нам в наших экономических бедах. Мы должны связаться с ними и их западными союзниками, чтобы они помогли нам выйти из этой ситуации"
  IND_japanese_aid_jica: "JICA"
- IND_japanese_aid_jica_desc: "JICA, также известное как Японское агентство международного сотрудничества, может быть очень полезной организацией в деле содействия развитию инфраструктуры и дорог нашей страны"
+ IND_japanese_aid_jica_desc: "JICA, также известное как Японское агентство международного сотрудничества, может быть очень полезной организацией в деле содействия развитию инфраструктуры и дорог нашей страны."
  IND_japanese_aid_metro_invest: "Японские инвестиции в метрополитен"
  IND_japanese_aid_metro_invest_desc: "Наше население должно быстро передвигаться по стране, и с помощью японских технологий и инвестиций в метро мы сможем достичь этой цели"
  IND_japanese_aid_java_airport: "Аэропорты Западной Явы"
@@ -739,8 +739,6 @@
  IND_back_muslims_d: "Поддержите мусульман"
  IND_crushed_gang_culture: "Подавить бандитскую культуру"
  IND_equipped_police: "Милитаризованная полиция"
- IND_kemdikibud_1: "Кемдикибуд"
- IND_kemdikibud_2: "Кемдикибуд"
  IND_komnas_ham: "KOMNAS-HAM"
  IND_guerilla: "Эксперты по партизанской войне"
  IND_rural_aid: "Помощь сельским жителям"
@@ -780,14 +778,14 @@
  indonesia.76854.a: "Давайте сделаем это"
  indonesia.76854.b: "Нет"
  IND_disasters_mechanic: "Страшная удача Индонезии"
- IND_disasters_mechanic_desc: "Индонезии очень повезло, что у нее в изобилии имеются природные ресурсы, рабочая сила и сила воли, чтобы пробиться в 21 век.\nНо, тем не менее, Индонезия сталкивается со многими проблемами, которые препятствуют ее прогрессу. Часто случаются аварии, которые можно было бы легко предотвратить, если бы не лучшая забота о конкретном регионе.\nПо этой причине наш долг и обязанность - своевременно уделять больше внимания нашим государствам, чтобы избежать катастрофической судьбы, которая нанесет нам серьезный ущерб."
+ IND_disasters_mechanic_desc: "Индонезии очень повезло, что у нее в изобилии имеются природные ресурсы, рабочая сила и сила воли, чтобы пробиться в 21 век.\nОднако, §HИндонезия сталкивается со многими проблемами§!, которые §RТормозят ее прогресс§!. Несчастные случаи являются §Rобщей темой§!, которую можно было бы легко предотвратить, если бы не более качественная помощь в определенном регионе.\n\nПо этой причине наш долг и обязанность — своевременно уделять больше внимания нашим штатам, чтобы избежать катастрофической судьбы, которая нанесла бы нам серьезный вред.\n\nКатастрофы будут продолжаться еще долгое время, однако если мы быстро с ними справимся, то через некоторое время они прекратятся!"
  IND_back_muslim: "Поддерживаем мусульман"
- IND_back_muslim_desc: "Мы - исламская нация! Поэтому мы должны защищать наших мусульман, чего бы нам это ни стоило. Поступая так, мы завоюем народную поддержку и искореним любую ненависть к нам в исламском большинстве Sulewesi\n\n\n\n\nПереговоры бесценны и должны начаться немедленно!"
- IND_muslim: "Вести переговоры с мусульманами в Сулевеси"
+ IND_back_muslim_desc: "Мы исламская нация! Поэтому мы должны защищать наших мусульман любой ценой. Это принесет нам народную поддержку и искоренит любую ненависть к нам в исламском большинстве Сулавеси\n\n\n\nПереговоры бесценны и должны начинаться немедленно!"
+ IND_muslim: "Переговоры с мусульманами на Сулавеси"
  IND_muslim2: "Дайте им надлежащую боевую подготовку"
  IND_muslim3: "Назначить местных администраторов"
  IND_muslim4: "Завершить переговоры"
- IND_muslim_generic: "Перевести ополченцев в Сулевеси"
+ IND_muslim_generic: "Переброска ополченцев на Сулавеси"
  IND_muslim_generic2: "Переместить христианские строительные проекты"
  IND_muslim_generic3: "Укреплять мечети"
  IND_back_papua: "Поддержка христиан"
@@ -800,13 +798,13 @@
  IND_papua_generic2: "Переместить исламские строительные проекты"
  IND_papua_generic3: "Укреплять церкви"
  IND_back_noone: "Никого не поддерживаю"
- IND_back_noone_desc: "Важно, чтобы государство не выбирало фаворитов в таких деликатных вопросах, как религиозные конфликты. Мы должны начать процесс ослабления этого напряжения, как путем переговоров, так и путем милитаризации конфликтных точек. \n\nДелание этого принесет больше спокойствия сулевцам и папуасам"
+ IND_back_noone_desc: "Важно, чтобы государство выбирало фаворитов по таким деликатным вопросам, как религиозный конфликт. Мы должны начать процесс ослабления этой напряженности, как путем переговоров, так и милитаризации точек конфликта.\n\nЭто принесет больше спокойствия жителям Сулавеси и Папуасам."
  IND_neutral: "Провести объединительные митинги в разных штатах"
- IND_neutral2: "Выделить средства на новое строительство в Сулевеси"
+ IND_neutral2: "Средства на новое строительство в Сулавеси"
  IND_neutral3: "Финансирует папуасские церкви"
  IND_neutral4: "Обещать папуасам лучшее представительство"
- IND_neutral5: "Обещать жителям Сулевеси лучший уход"
- IND_neutral_generic: "Продвигать программы призыва в армию для папуасов и сулевцев"
+ IND_neutral5: "Обещают Сулавеси лучшую заботу"
+ IND_neutral_generic: "Программы призыва на военную службу для папуасов и жителей Сулавеси"
  IND_neutral_generic2: "Милитаризировать доки, используемые для контрабанды оружия"
  IND_neutral_generic3: "Милитаризировать \"горячие точки\", известные своими столкновениями"
  indonesia.41.t: "Катастрофа на Калимантане!"
@@ -815,8 +813,8 @@
  indonesia.42.t: "Катастрофа в Западном Папуа!"
  indonesia.42.d: "Наша неспособность обеспечить население Западного Папуа привела к промышленной аварии, повлекшей за собой повреждение нескольких производственных объектов"
  indonesia.42.a: "Это можно было предотвратить!"
- indonesia.43.t: "Катастрофа на Молуккском полуострове!"
- indonesia.43.d: "Наша неспособность обеспечить население Молукки привела к потасовке в популярном торговом центре, что привело к серьезной нестабильности в городе!"
+ indonesia.43.t: "Катастрофа на Молуккских островах!"
+ indonesia.43.d: "Наша неспособность обеспечить население Молуккских островов привела к драке в популярном торговом центре, что привело к серьезной нестабильности в городе!"
  indonesia.43.a: "Это можно было предотвратить!"
  indonesia.44.t: "Катастрофа в Западном Папуа!"
  indonesia.44.d: "Наша неспособность обеспечить население Калимантана привела к промышленной аварии, повлекшей за собой повреждение нескольких производственных объектов"
@@ -827,14 +825,14 @@
  indonesia.46.t: "Катастрофа на Северной Суматре!"
  indonesia.46.d: "Наша неспособность обеспечить население Северной Суматры привела к промышленной аварии, повлекшей за собой повреждение нескольких производственных объектов"
  indonesia.46.a: "Это можно было предотвратить!"
- indonesia.47.t: "Катастрофа в Сулевеси!"
- indonesia.47.d: "Наша неспособность обеспечить население Сулевеси привела к промышленной аварии, повлекшей за собой повреждение нескольких производственных объектов"
+ indonesia.47.t: "Катастрофа на Сулавеси!"
+ indonesia.47.d: "Наша неспособность обеспечить население Сулавеси привела к промышленной аварии, которая привела к повреждению нескольких производственных объектов."
  indonesia.47.a: "Это можно было предотвратить!"
  indonesia.48.t: "Катастрофа в Джакарте!"
  indonesia.48.d: "Наша неспособность обеспечить население Джакарты, нашей столицы, привела к промышленной аварии, повлекшей за собой повреждение нескольких производственных объектов"
  indonesia.48.a: "Это можно было предотвратить!"
- indonesia.49.t: "Катастрофа на Северном Молуккском полуострове!"
- indonesia.49.d: "Наша неспособность обеспечить население Северного Молуккского архипелага привела к промышленной аварии, повлекшей за собой повреждение нескольких производственных объектов"
+ indonesia.49.t: "Катастрофа на Северных Молуккских островах!"
+ indonesia.49.d: "Наша неспособность обеспечить население Северных Молуккских островов привела к промышленной аварии, которая привела к повреждению нескольких производственных объектов."
  indonesia.49.a: "Это можно было предотвратить!"
  indonesia.51.t: "Катастрофа на Малых Зондских островах!"
  indonesia.51.d: "Наша неспособность обеспечить население Малых Зондских островов привела к промышленной аварии, повлекшей за собой повреждение нескольких производственных объектов"
@@ -843,19 +841,19 @@
  indonesia.52.d: "Наша неспособность обеспечить население островов Риау. привела к промышленной аварии, повлекшей за собой повреждение нескольких производственных объектов"
  indonesia.52.a: "Это можно было предотвратить!"
  indonesia.53.t: "Катастрофа на Калимантане!"
- indonesia.53.d: "Наша неспособность обеспечить население Калимантана привела к авиационной катастрофе, нанесшей серьезный ущерб провинциальному аэропорту!"
+ indonesia.53.d: "Наша неспособность оказать помощь жителям Калимантана привела к авиакатастрофе, в результате которой был нанесен серьезный ущерб провинциальному аэропорту!"
  indonesia.53.a: "Это можно было предотвратить!"
  indonesia.54.t: "Катастрофа на Южной Суматре!"
  indonesia.54.d: "Наша неспособность обеспечить население Южной Суматры привела к промышленной аварии, повлекшей за собой повреждение нескольких производственных объектов"
  indonesia.54.a: "Это можно было предотвратить!"
  indonesia.56.t: "Катастрофа в Западном Папуа!"
- indonesia.56.d: "Наша неспособность обеспечить народ Западного Папуа привела к авиационной катастрофе, причинившей серьезный ущерб провинциальному аэропорту!"
+ indonesia.56.d: "Наша неспособность оказать помощь жителям Западного Папуа привела к авиакатастрофе, в результате которой был нанесен серьезный ущерб провинциальному аэропорту!"
  indonesia.56.a: "Это можно было предотвратить!"
- indonesia.57.t: "Катастрофа в Сулевеси!"
- indonesia.57.d: "Наша неспособность построить надлежащую инфраструктуру в Сулевеси привела к обрушению нескольких зданий и гибели многих наших людей"
+ indonesia.57.t: "Катастрофа на Сулавеси!"
+ indonesia.57.d: "Наши неудачи в создании надлежащей инфраструктуры на Сулавеси привели к обрушению нескольких зданий и гибели многих наших людей."
  indonesia.57.a: "Это можно было предотвратить!"
  indonesia.58.t: "Катастрофа в Западном Папуа!"
- indonesia.58.d: "Наша неспособность обеспечить надлежащее управление Западным Папуа привела к инциденту, когда один из наших военных заводов рухнул"
+ indonesia.58.d: "Наша неспособность обеспечить надлежащее управление Западным Папуа привела к инциденту, в результате которого один из наших военных заводов рухнул."
  indonesia.58.a: "Это можно было предотвратить!"
  indonesia.59.t: "Катастрофа в Папуа!"
  indonesia.59.d: "Наша неспособность обеспечить инфраструктуру Западного Папуа привела к промышленной аварии, в результате которой были повреждены несколько военных производственных объектов"
@@ -867,7 +865,7 @@
  indonesia.62.d: "Наша неспособность обеспечить население Западной Явы, где также находится наша столица, привела к инциденту, когда рухнула промышленная фабрика"
  indonesia.62.a: "Это можно было предотвратить!"
  indonesia.63.t: "Катастрофа в небе!"
- indonesia.63.d: "Наша неспособность обеспечить надлежащее авиационное оборудование привела к техническим неполадкам на одном из наших рейсов, в результате чего многие погибли!"
+ indonesia.63.d: "Неспособность обеспечить самолет надлежащим авиационным оборудованием привела к техническим сбоям на одном из наших рейсов, в результате чего погибло много людей!"
  indonesia.63.a: "Это можно было предотвратить!"
  indonesia.64.t: "Катастрофа в нашей столице!!!"
  indonesia.64.d: "Наша неспособность обеспечить население Западной Явы, где также находится наша столица, привела к тому, что несколько промышленных заводов рухнули"
@@ -920,12 +918,12 @@
  IND_papua_resist3: "Папуасское христианское сопротивление"
  IND_papua_resist4: "Папуасское христианское сопротивление"
  IND_papua_resist_info: "Христиане нашей земли проживают в первую очередь в Папуа. К сожалению, они подвергаются жестокому обращению со стороны прошлого и нынешнего правительств, и жители очень не любят нас, что делает наши политические миссии там настоящим вызовом"
- IND_islamic_resist: "Сулевское мусульманское сопротивление"
- IND_islamic_resist2: "Сулевское мусульманское сопротивление"
- IND_islamic_resist3: "Сулевское мусульманское сопротивление"
- IND_islamic_resist4: "Сулевское мусульманское сопротивление"
- IND_islamic_resist_c1: "Минимальное сулевское мусульманское сопротивление"
- IND_islamic_resist_info: "Сулевеси - один из наших крупнейших островов, на котором проживает множество различных народов. Однако многочисленное мусульманское большинство призывает государство к пренебрежению и оказывает серьезное сопротивление большей части наших сил и экономики. Это сопротивление очень осложняет жизнь наших людей и сил безопасности"
+ IND_islamic_resist: "Сулавесийское мусульманское сопротивление"
+ IND_islamic_resist2: "Сулавесийское мусульманское сопротивление"
+ IND_islamic_resist3: "Сулавесийское мусульманское сопротивление"
+ IND_islamic_resist4: "Сулавесийское мусульманское сопротивление"
+ IND_islamic_resist_c1: "Минимальное сопротивление мусульман Сулавеси"
+ IND_islamic_resist_info: "Сулавеси — один из наших крупнейших островов, и он населен многими разными народами. Однако, значительное мусульманское большинство призывает государство к пренебрежению и оказывает сильное сопротивление многим нашим силам и экономике. Это сопротивление очень усложняет жизнь нашим мужчинам и силам безопасности"
  IND_IND_Aceh_insurgency_from_level_1_to_level_2: "Изменить §YПовстанческое движение в Ачехе§! по \nОрганизация Восстановить: §G+10%§! \nСкорость роста сопротивляемости: §G-5%§!\nСоответствие требованиям: §G+5%§!\nМаксимальное количество отраслей в штате: §G+50%§!\nСкорость дивизий: §G+5%§! \nАчех находится в состоянии беспорядка и восстания с 1976 года, и это приводит нашу страну к нестабильности и ненужному кровопролитию. Наши военные слишком сосредоточены на борьбе с этими повстанцами, и это приводит к тому, что мы отстаем в военном отношении."
  IND_IND_Aceh_insurgency_from_level_2_to_level_3: "Изменить §YПовстанческое движение в Ачехе§! по \nОрганизация Восстановить: §G+2%§! \nСкорость роста сопротивляемости: §G-5%§!\nСоответствие требованиям §G+5%§!\nМаксимальное количество отраслей в штате: §G+15%§!\nСкорость дивизий: §G+20%§! \nАчех находится в состоянии беспорядка и восстания с 1976 года, и это приводит нашу страну к нестабильности и ненужному кровопролитию. Наши военные слишком сосредоточены на борьбе с этими повстанцами, и это приводит к тому, что мы отстаем в военном отношении."
  IND_IND_Aceh_insurgency_from_level_3_to_level_4: "Изменить §YПовстанческое движение в Ачехе§! по \nОрганизация Восстановить: §G+1%§! \nСкорость роста сопротивляемости: §G-3%§!\nСоответствие требованиям §G+2%§!\nМаксимальное количество отраслей в штате: §G+5%§!\n Ачех находится в состоянии беспорядка и восстания с 1976 года, и это приводит нашу страну к нестабильности и ненужному кровопролитию. Наши военные слишком сосредоточены на борьбе с этими повстанцами, и это приводит к тому, что мы отстаем в военном отношении."
@@ -951,3 +949,5 @@
  indonesian_caliphate: "Индонезийский халифат расширяется!"
  indonesia_confront_australia_threat: "Индонезия угрожает Австралии из-за Тимора-Лешти!"
  IND_our_policies_tt: "Мы должны завершить либо §Y$IND_new_capital$§! или §Y$IND_new_silkroad$§!"
+ IND_grasberg_mine_exploitation: "Эксплуатация рудника Грасберг"
+ IND_grasberg_mine_exploitation_desc: "Шахта Грасберг в Западном Папуа является одной из крупнейших в мире золото-медных шахт. Мы должны расширять и разрабатывать резервы в этом районе, чтобы лучше вывести Индонезию на рынок драгоценных металлов."
