--- a/localisation/russian/MD_internal_factions_l_russian.yml
+++ b/localisation/russian/MD_internal_factions_l_russian.yml
@@ -494,7 +494,7 @@
  internal_factions_events.13.a: "Грустно"
  internal_factions_events.13.b: "Субсидировать бизнес."
  internal_factions_events.14.t: "$labour_unions$ требует увеличения заработной платы"
- internal_factions_events.14.d: "$labour_unions$ требует, чтобы предприятия и промышленные конгломераты в нашей стране были вынуждены увеличить оплату труда рабочих."
+ internal_factions_events.14.d: "$labour_unions$ теперь требуют, чтобы предприятия и промышленные конгломераты в нашей стране были вынуждены увеличить заработную плату рабочим."
  internal_factions_events.14.a: "Мы на стороне бизнеса"
  internal_factions_events.14.b: "Мы на стороне профсоюзов"
  internal_factions_events.14.c: "Ни то, ни другое"
