--- a/localisation/russian/MD_subideology_parties_l_russian.yml
+++ b/localisation/russian/MD_subideology_parties_l_russian.yml
@@ -3123,9 +3123,9 @@
  TUR.Neutral_Muslim_Brotherhood_akp: "£TUR_Neutral_Muslim_Brotherhood (AKP) Партия справедливости и развития"
  TUR.Neutral_Muslim_Brotherhood_akp_icon: "£TUR_Neutral_Muslim_Brotherhood"
  TUR.Neutral_Muslim_Brotherhood_akp_desc: "(Умеренный исламизм) - Партия справедливости и развития (турецкий: Adalet ve Kalkınma Partisi)\n\nПартия справедливости и развития (Adalet ve Kalkınma Partisi) - консервативная исламистская политическая партия, сосредоточенная вокруг политики Реджепа Тайипа Эрдогана. Хотя она и заявляет о своей светскости, многие ее политические решения направлены на возвращение многих элементов консервативного ислама, таких как отмена запрета на хиджаб и налогообложение алкоголя. Что касается внешней политики, партия часто согласуется с США и Западом, но не испытывает проблем с учетом собственных интересов Турции, и часто внешняя политика осуществляется без установленного соответствия.\n\nВоенный §YПоложение§! от этой партии: §R-100§!"
- TUR.Neutral_Muslim_Brotherhood: "£TUR_Neutral_Muslim_Brotherhood ПСР"
+ TUR.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small Умеренные исламисты"
  TUR.Neutral_Muslim_Brotherhood_icon: "£muslim_brotherhood_small"
- TUR.Neutral_Muslim_Brotherhood_desc: "ПСР, или Партия справедливости и развития (Adalet ve Kalkınma Partisi) – это консервативная исламистская партия, ориентированная на политику Реджепа Тайипа Эрдогана. Хотя, она считает себя секуляритивной, многие ее предложения возвращают в страну консервативный ислам. Во внешней политике, партия обращена к США и Западу, но она не пренебрегает турецкими национальными интересами."
+ TUR.Neutral_Muslim_Brotherhood_desc: ""
  TUR.Neutral_Autocracy: "£TUR_Neutral_Autocracy (GP) Молодая партия"
  TUR.Neutral_Autocracy_icon: "£TUR_Neutral_Autocracy"
  TUR.Neutral_Autocracy_desc: "(Либеральный популизм) - Молодая партия (турецкий: GENÇPARTİ)\n\nGENÇPARTİ (Молодая партия) - популистская либеральная партия. Лидер партии Джем Узан не боится использовать медиа-империю своей семьи для укрепления своей популярности, и есть подозрения, что он участвует в коррупции и теневых деловых операциях.\n\nВоенный §YПоложение§! от этой партии: §G+50§!"
@@ -5403,13 +5403,13 @@
  IRE.Nat_Autocracy_desc: ""
  IRE.Monarchist: "£ire_monarchist Маккарти Мор"
  IRE.Monarchist_desc: ""
- ISR.conservatism: "£GFX_ISR_conservatism Ликуд"
+ ISR.conservatism: "£ISR_conservatism Ликуд"
  ISR.conservatism_desc: ""
  ISR.conservatism_icon: "£ISR_conservatism"
  ISR.conservatism_alt: "£ISR_conservatism_alt Новая Надежда"
  ISR.conservatism_alt_desc: ""
  ISR.conservatism_alt_icon: "£ISR_conservatism_alt"
- ISR.liberalism: "£GFX_ISR_liberalism Ха-Тнуа"
+ ISR.liberalism: "£ISR_liberalism_alt  Ха-Тнуа"
  ISR.liberalism_desc: ""
  ISR.liberalism_icon: "£ISR_liberalism_alt"
  ISR.liberalism_alt: "£ISR_liberalism_alt2 Изменять"
@@ -5430,58 +5430,58 @@
  ISR.liberalism_alt6: "£ISR_liberalism_alt6 Ха-махане ха-мамлахти"
  ISR.liberalism_alt6_desc: ""
  ISR.liberalism_alt6_icon: "£ISR_liberalism_alt6"
- ISR.socialism: "£GFX_ISR_socialism Лейбористская партия"
+ ISR.socialism: "£ISR_socialism  Лейбористская партия"
  ISR.socialism_desc: ""
  ISR.socialism_icon: "£ISR_socialism"
- ISR.Western_Autocracy: "£GFX_ISR_Western_Autocracy Еврейский дом"
+ ISR.Western_Autocracy: "£ISR_Western_Autocracy  Еврейский дом"
  ISR.Western_Autocracy_desc: ""
  ISR.Western_Autocracy_icon: "£ISR_Western_Autocracy"
- ISR.Communist-State: "£GFX_ISR_Communist_State Хадаш"
+ ISR.Communist-State: "£ISR_Communist_State  Хадаш"
  ISR.Communist-State_desc: ""
  ISR.Communist-State_icon: "£ISR_Communist_State"
- ISR.Autocracy: "£GFX_ISR_Autocracy Тааль"
+ ISR.Autocracy: "£ISR_Autocracy  Тааль"
  ISR.Autocracy_desc: ""
  ISR.Autocracy_icon: "£ISR_Autocracy"
- ISR.Conservative: "£generic_Conservative_small Ткума"
+ ISR.Conservative: "£ISR_anarchist_communism Ткума"
  ISR.Conservative_desc: ""
  ISR.Conservative_icon: "£ISR_anarchist_communism"
- ISR.anarchist_communism: "£GFX_ISR_anarchist_communism Балад"
+ ISR.anarchist_communism: "£ISR_Nat_Populism Балад"
  ISR.anarchist_communism_desc: ""
  ISR.anarchist_communism_icon: "£ISR_Nat_Populism"
- ISR.Neutral_conservatism: "£generic_Neutral_conservatism_small Еш Атид"
+ ISR.Neutral_conservatism: "£ISR_non_aligned_conservative Еш Атид"
  ISR.Neutral_conservatism_desc: ""
  ISR.Neutral_conservatism_icon: "£ISR_non_aligned_conservative"
- ISR.oligarchism: "£generic_oligarchism_small Лидер партии"
+ ISR.oligarchism: "£ISR_oligarchism Лидер партии"
  ISR.oligarchism_desc: ""
  ISR.oligarchism_icon: "£ISR_oligarchism"
- ISR.neutral_Social: "£GFX_ISR_neutral_Social Мерец"
+ ISR.neutral_Social: "£ISR_neutral_Social Мерец"
  ISR.neutral_Social_desc: ""
  ISR.neutral_Social_icon: "£ISR_neutral_Social"
- ISR.Neutral_Libertarian: "£GFX_ISR_Neutral_Libertarian Зеут"
+ ISR.Neutral_Libertarian: "£ISR_Neutral_Libertarian Зеут"
  ISR.Neutral_Libertarian_desc: ""
  ISR.Neutral_Libertarian_icon: "£ISR_Neutral_Libertarian"
  ISR.Neutral_Autocracy: "£ISR_Neutral_Autocracy Яхадут ха-Тора"
  ISR.Neutral_Autocracy_desc: ""
  ISR.Neutral_Autocracy_icon: "£ISR_Neutral_Autocracy"
- ISR.Neutral_Communism: "£GFX_ISR_Neutral_Communism Рабочая партия ДААМ"
+ ISR.Neutral_Communism: "£ISR_Neutral_Communism Рабочая партия ДААМ"
  ISR.Neutral_Communism_desc: ""
  ISR.Neutral_Communism_icon: "£ISR_Neutral_Communism"
- ISR.Neutral_Muslim_Brotherhood: "£GFX_ISR_Neutral_Muslim_Brotherhood Объединённый арабский список"
+ ISR.Neutral_Muslim_Brotherhood: "£ISR_Neutral_Muslim_Brotherhood Объединённый арабский список"
  ISR.Neutral_Muslim_Brotherhood_desc: ""
  ISR.Neutral_Muslim_Brotherhood_icon: "£ISR_Neutral_Muslim_Brotherhood"
- ISR.Neutral_green: "£GFX_ISR_Neutral_green Зелёное движение"
+ ISR.Neutral_green: "£ISR_Neutral_Green Зелёное движение"
  ISR.Neutral_green_desc: ""
  ISR.Neutral_green_icon: "£ISR_Neutral_Green"
- ISR.Nat_Autocracy: "£GFX_ISR_Nat_Autocracy Армия обороны Израиля"
+ ISR.Nat_Autocracy: "£ISR_Nat_Autocracy Армия обороны Израиля"
  ISR.Nat_Autocracy_desc: ""
  ISR.Nat_Autocracy_icon: "£ISR_Nat_Autocracy"
- ISR.Nat_Fascism: "£GFX_ISR_Nat_Fascism Отзма Иегудит"
+ ISR.Nat_Fascism: "£ISR_Nat_Fascism Отзма Иегудит"
  ISR.Nat_Fascism_desc: ""
  ISR.Nat_Fascism_icon: "£ISR_Nat_Fascism"
  ISR.Monarchist: "£ISR_nationalist_monarchist Noam"
  ISR.Monarchist_desc: ""
  ISR.Monarchist_icon: "£ISR_nationalist_monarchist"
- ISR.Nat_Populism: "£GFX_ISR_Nat_Populism ШАС"
+ ISR.Nat_Populism: "£ISR_liberalism ШАС"
  ISR.Nat_Populism_desc: ""
  ISR.Nat_Populism_icon: "£ISR_liberalism"
  ITA.democratic_senate: "£ITA_roman_senate Технократический сенат"
@@ -6100,7 +6100,7 @@
  MAU.Neutral_conservatism: "£MAU_neutral_conservative HATEM"
  MAU.Neutral_conservatism_desc: ""
  MAU.Neutral_conservatism_icon: "£MAU_neutral_conservative"
- MAU.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small Тевасоул"
+ MAU.Neutral_Muslim_Brotherhood: "£MAU_muslim_brotherhood Тевасоул"
  MAU.Neutral_Muslim_Brotherhood_icon: "£MAU_muslim_brotherhood"
  MAU.Neutral_Muslim_Brotherhood_desc: ""
  MAU.Nat_Populism: "£generic_Nat_Populism_small Союз за республику"
@@ -6539,13 +6539,13 @@
  PAL.Western_Autocracy_desc: ""
  PAL.liberalism: "£generic_liberalism_small Третий путь"
  PAL.liberalism_desc: ""
- PAL.socialism: "£generic_socialism_small Палестинская национальная инициатива"
+ PAL.socialism: "£PAL_socialism Палестинская национальная инициатива"
  PAL.socialism_icon: "£PAL_socialism"
  PAL.socialism_desc: ""
- PAL.Communist-State: "£generic_Communist_State_small Народный фронт освобождения Палестины"
+ PAL.Communist-State: "£PAL_emerging_communism Народный фронт освобождения Палестины(PFLP)"
  PAL.Communist-State_icon: "£PAL_emerging_communism"
  PAL.Communist-State_desc: ""
- PAL.anarchist_communism: "£generic_anarchist_communism_small Палестинская народная партия"
+ PAL.anarchist_communism: "£PAL_left_wing_radical Демократический фронт освобождения Палестины(DFLP)"
  PAL.anarchist_communism_icon: "£PAL_left_wing_radical"
  PAL.anarchist_communism_desc: ""
  PAL.Autocracy: "£generic_Autocracy_small As-Sa'iqa"
@@ -6554,7 +6554,7 @@
  PAL.Vilayat_e_Faqih: "£PAL_moderate_shiite_revolutionary Палестинский исламский джихад"
  PAL.Vilayat_e_Faqih_icon: "£PAL_moderate_shiite_revolutionary"
  PAL.Vilayat_e_Faqih_desc: ""
- PAL.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small Хамас"
+ PAL.Neutral_Muslim_Brotherhood: "£PAL_Neutral_Muslim_Brotherhood Хамас"
  PAL.Neutral_Muslim_Brotherhood_icon: "£PAL_Neutral_Muslim_Brotherhood"
  PAL.Neutral_Muslim_Brotherhood_desc: ""
  PAL.Neutral_Autocracy: "£PAL_non_aligned_autocracy Мученики Аль-Аксы"
@@ -6563,16 +6563,16 @@
  PAL.Neutral_conservatism: "£PAL_non_aligned_conservative Tanzim"
  PAL.Neutral_conservatism_icon: "£PAL_non_aligned_conservative"
  PAL.Neutral_conservatism_desc: ""
- PAL.neutral_Social: "£generic_neutral_Social_small ФАТХ"
+ PAL.neutral_Social: "£PAL_neutral_Social ФАТХ"
  PAL.neutral_Social_icon: "£PAL_neutral_Social"
  PAL.neutral_Social_desc: ""
- PAL.Neutral_Communism: "£generic_Neutral_Communism_small Демократический фронт освобождения Палестины"
+ PAL.Neutral_Communism: "£PAL_non_aligned_communism Палестинская народная партия(PPP)"
  PAL.Neutral_Communism_icon: "£PAL_non_aligned_communism"
  PAL.Neutral_Communism_desc: ""
- PAL.Neutral_green: "£generic_Neutral_green_small Палестинский демократический союз"
+ PAL.Neutral_green: "£PAL_green Палестинский демократический союз(FIDA)"
  PAL.Neutral_green_icon: "£PAL_green"
  PAL.Neutral_green_desc: ""
- PAL.Nat_Autocracy: "£generic_Nat_Autocracy_small Армия освобождения Палестины"
+ PAL.Nat_Autocracy: "£PAL_millitary_junta Армия освобождения Палестины(PLA)"
  PAL.Nat_Autocracy_icon: "£PAL_millitary_junta"
  PAL.Nat_Autocracy_desc: ""
  PAL.Nat_Populism: "£PAL_Nat_Populism Логово Льва"
@@ -6803,7 +6803,7 @@
  SCO.anarchist_communism_desc: "Демократический социализм"
  SCO.Conservative: "£generic_Conservative_small Шотландская семейная партия"
  SCO.Conservative_desc: "Христианские правые -"
- SCO.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small Объединённая мусульманская партия Шотландии"
+ SCO.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small UMPS - Объединённая мусульманская партия Шотландии"
  SCO.Neutral_Muslim_Brotherhood_desc: ""
  SCO.Neutral_conservatism: "£generic_Neutral_conservatism_small Шотландская юнионистская партия"
  SCO.Neutral_conservatism_desc: "Британский юнионизм - "
@@ -7334,7 +7334,7 @@
  TUN.liberalism_desc: ""
  TUN.Neutral_Communism: "£generic_Neutral_Communism_small Движение социалистических демократов"
  TUN.Neutral_Communism_desc: ""
- TUN.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small Партия возрождения"
+ TUN.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small Партия возрождения(ME)"
  TUN.Neutral_Muslim_Brotherhood_desc: ""
  TUN.Western_Autocracy: "£TUN_Autocracy_small Демократическое конституционное объединение"
  TUN.Western_Autocracy_icon: "£TUN_Autocracy_small"
