--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -606,8 +606,6 @@
  BLR_Operation_O_desc: "最近的军事演习表明，我军比防卫某块领土更有能力完成雄心勃勃的任务。立陶宛近年来一直在使用其地理位置——它给我们和俄罗斯带来了压力，也许我们可以说服俄罗斯参与我们的冒险，因为立陶宛在其背后并没有庞大的防御同盟。"
  BLR_Military_Exercises_Union: "“同盟决心”演习"
  BLR_Military_Exercises_Union_desc: "在白俄罗斯领土上举行俄罗斯联邦武装部队和白俄罗斯共和国武装部队的联合军事演习"
- BLR_Need_vilnus: "通向原住民港口的维尔纽斯"
- BLR_Need_vilnus_desc: "我们的特别行动结果对我们来说不尽如人意，因此我们打算实现我们的目标，通过将维柳萨移交给我们的方式来呼吁俄罗斯。"
  BLR_army_on_streets_of_cities: "大规模抗议"
  BLR_army_on_streets_of_cities_desc: "人民已经反叛我们，他们认为我国政府正在选举中装模作样地投票，并且处处摧毁国家。我希望我们已经为这种事情做好了充分的准备"
  BLR_Kolya: "科利亚·卢卡申科"
@@ -813,7 +811,6 @@
  BLR_latgale_claims: "宣称§Y[LAT.GetNamewithFlag]§!领土"
  BLR_Litva_belarusization_category: "整合新土地"
  BLR_Litva_belarusization_category_desc: "新土地必须被整合进我们的国家。立陶宛的复兴无疑是一个充满风险的计划，但这或许是建立一个强大国度的关键。"
- BLR_vilnus_return: "整合维尔努斯"
  BLR_samogitia_return: "整合萨莫吉希亚"
  BLR_sudovia_return: "整合苏多维亚"
  BLR_klaipeda_return: "整合克莱佩达"
@@ -828,8 +825,6 @@
  BLR_Deal_with_Poland: "与波兰人联盟的协议"
  BLR_Great_stone_china: "巨石公园"
  BLR_New_concept_security: "国家安全新概念"
- BLR_belorusisation_vilnus: "维尔纽斯的白俄罗斯化"
- BLR_belorusisation_vilnus_desc: "维尔纽斯长期以来一直是我们想要拥有的有争议的地区，但现在我们已经控制了它，我们准备向大众宣传用白俄罗斯人定居这一区域的想法。"
  BLR_people_militia: "人民武装"
  BLR_people_militia_desc: "但情况并非一帆风顺。我不止一次说过：每个人都（不仅仅是男人）都至少应该能够持械。至少在必要时，为了保护你的家人，你的家庭，你的故乡，祖国的角落，以及（如果有必要的话）国家，没有这个世界就没有角落，没有家，就没有别的东西。许多人明白这一点，”亚历山大·卢卡申科强调道。"
  BLR_Kommunarka_category: "科穆纳卡工厂"
@@ -1496,16 +1491,10 @@
  BLR_Zimbabwe_desc: "我们将前往津巴布韦签订产品供应合同。"
  BLR_Excursion_Warsaw: "游览华沙"
  BLR_Excursion_Warsaw_desc: "瓦格纳主义者积极鼓动并抱怨安排“游览”华沙的愿望。我们可以帮助他们组织它。理论上来说，突破我国领土边界是可能的，但之后波兰会向我们宣战吗？"
- BLR_Excursion_Vilnus: "游览维尔纽斯"
- BLR_Excursion_Vilnus_desc: "瓦格纳主义者积极鼓动并抱怨安排去维尔纽斯“游览”的愿望。我们可以帮助他们组织它。理论上来说，突破我国领土边界是可能的，但之后波兰会向我们宣战吗？"
  BLR_azarenok_tv: "卢卡申科的新宣传家"
  BLR_azarenok_tv_desc: "现在在电视上你经常可以看到新的宣传员代表我们党进行广播，让人民相信我们的行为是正确的。"
  BLR_decree_227: "第227号法令“关于提供安全服务”"
  BLR_decree_227_desc: "227号新政在多家媒体引起轩然大波。我们首次允许私营公司接受用于保护设施的武器。这真的会导致什么结果吗？"
- Basic_Law_BLR: "白俄罗斯特别行政区基本法"
- Basic_Law_BLR_desc: "中华人民共和国白俄罗斯特别行政区基本法是白俄罗斯的宪法性文件，代替白俄罗斯宪法。根据中华人民共和国宪法第三十一条，白俄罗斯具有特别行政区地位，为实行“一国两制”政策提供了宪法保障，也是制定白俄罗斯特别行政区基本法的宪法依据。"
- One_Country_Two_Systems_BLR: "一国两制"
- One_Country_Two_Systems_BLR_desc: "一国两制的模式，在澳门和香港的例子上得到了完美的体现。而在白俄罗斯，却没有发生太大的变化，甚至还被简化了，因为事实证明，中国的意识形态在这个欧洲国家已经相当扎根了。"
  BLR_rus_zakupki: "采购俄罗斯装备"
  BLR_rus_zakupki_desc: "我军技术落后，需要迎头赶上。我们将为我军购买最好的俄罗斯装备。"
  BLR_rus_military_academy: "俄罗斯军事教育标准"
@@ -1556,7 +1545,6 @@
  BLR_nazbols_militaries: "贿赂§Y军方§!"
  BLR_Litva_belarusizations_category: "整合立陶宛"
  BLR_Litva_belarusizations_category_desc: "立陶宛过去是、将来也永远是白俄罗斯的土地。我们将把这些土地归还给白俄罗斯人民。"
- BLR_vilnus_returns: "整合维尔纽斯"
  BLR_samogitia_returns: "整合萨莫吉希亚"
  BLR_sudovia_returns: "整合苏多维亚"
  BLR_klaipeda_returns: "整合克莱佩达"
@@ -2296,3 +2284,9 @@
  ARM_armenia_notreadys_union_state: "§R不可用§!"
  BLR_constitution_BSSR: "白俄罗斯苏维埃社会主义共和国宪法"
  BLR_constitution_BSSR_desc: "首先，需要恢复白俄罗斯苏维埃社会主义共和国宪法。"
+ BLR_Excursion_Vilnius: "游览维尔纽斯"
+ BLR_Excursion_Vilnius_desc: "瓦格纳主义者积极鼓动并抱怨安排去维尔纽斯“游览”的愿望。我们可以帮助他们组织它。理论上来说，突破我国领土边界是可能的，但之后波兰会向我们宣战吗？"
+ BLR_vilnius_return: "整合维尔纽斯"
+ BLR_vilnius_returns: "整合维尔纽斯"
+ BLR_belorusisation_vilnius: "维尔纽斯的白俄罗斯化"
+ BLR_belorusisation_vilnius_desc: "维尔纽斯长期以来一直是我们想要拥有的有争议的地区，但现在我们已经控制了它，我们准备向大众宣传用白俄罗斯人定居这一区域的想法。"
