--- a/localisation/simp_chinese/MD_focus_GRE_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GRE_l_simp_chinese.yml
@@ -115,9 +115,9 @@
  GRE_lowers_debt_TT: "§G债务危机缓解§!"
  GRE_end_austerity_TT: "§G结束紧缩政策的抗议§!"
  GRE_increase_drift_TT: "§G增加此政党的支持度§!"
- GRE_south_-5_TT: "§H希腊裔塞浦路斯人§!§G失去§!§H5点力量！§!"
+ GRE_south_-5_TT: "§H希腊裔塞浦路斯人§!§R失去§!§H5点力量！§!"
  GRE_north_-10_TT: "§H希腊裔塞浦路斯人§!§R失去§!§H10点力量！§!"
- GRE_south_-20_TT: "§H希腊裔塞浦路斯人§!§G失去§!§H20点力量！§!"
+ GRE_south_-20_TT: "§H希腊裔塞浦路斯人§!§R失去§!§H20点力量！§!"
  GRE_brit_5_TT: "§G获得5点英国支持率§!"
  GRE_brit_30_TT: "§G获得30点英国支持率§!"
  GRE_unification_TT: "完成后，将每月召开一次会议，根据批准情况，可能会取得进展。"
@@ -609,13 +609,12 @@
  GRE_enemy_blocked_us: "§R如果这些决议都无法实施，那么说明敌人暂时阻止了我们获得支持度，或者我们不符合其他要求！§!"
  GRE_unable_to_gain_strength: "§H希腊裔塞浦路斯人§!在§H60天内§!将§G无法§!获得力量"
  TUR_unable_to_gain_strength: "§H土耳其族塞浦路斯人§!在§H60天内§!将§G无法§!获得力量"
- GRE_north_5_TT: "§H土耳其族塞浦路斯人§!§G获得§!§H5点力量§!"
+ GRE_north_5_TT: "§H土耳其族塞浦路斯人§!§G获得§!§H5点力量！§!"
  GRE_gain_5_strength: "§H希腊裔塞浦路斯人§!§G获得§!§H5点力量§!"
  GRE_gain_20_strength: "§H希腊裔塞浦路斯人§!§G获得§!§H20点力量§!"
- TUR_gain_20_strength: "§H土耳其族塞浦路斯人§!§G获得§!§H20点力量§!"
- GRE_turks_lose_5_strength: "§H土耳其族塞浦路斯人§!§R失去§!§H5点力量§!"
- GRE_lose_20_gain_20: "§H土耳其族塞浦路斯人§!§G失去§!§H20点力量§!"
- GRE_lose_20_gain_202: "§H希腊裔塞浦路斯人§!§R失去§!§H20点力量§!"
+ TUR_gain_20_strength: "§H土耳其族塞浦路斯人§!§G获得§!§H20点力量！§!"
+ GRE_turks_lose_5_strength: "§H土耳其族塞浦路斯人§!§R失去§!§H5点力量！§!"
+ GRE_lose_20_gain_20: "§H土耳其族塞浦路斯人§!§R失去§!§H20点力量§!"
  GRE_NCY_incite_riot_TT: "§H希腊裔塞浦路斯人§!拥有至少§H50%§!力量"
  TUR_has_100_strength: "§H土耳其族塞浦路斯人§!拥有§H100%§!力量。"
  GRE_has_100_strength: "§H希腊裔塞浦路斯人§!拥有§H100%§!力量。"
