--- a/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
@@ -17,8 +17,8 @@
  modifier_production_speed_synthetic_refinery_factor: "£construction_speed_texticon §Y$synthetic_refinery$§!建造速度"
  modifier_production_speed_synthetic_refinery_factor_desc: "改变$synthetic_refinery$的建造速度"
  modifier_production_speed_radar_station_factor: "£construction_speed_texticon §Y$radar_station$§!建造速度"
- modifier_production_speed_rocket_site_factor: "£construction_speed_texticon §Y$anti_air_building$§!建造速度"
- modifier_production_speed_rocket_site_factor_desc: "改变地空导弹阵地的建造速度。"
+ modifier_production_speed_rocket_site_factor: "£construction_speed_texticon §Y$rocket_site$§!建造速度"
+ modifier_production_speed_rocket_site_factor_desc: "改变§Y$rocket_site$§!的建造速度。"
  modifier_production_speed_internet_station_factor: "£construction_speed_texticon §Y$internet_station$§!建造速度"
  communism_drift: "£emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率"
  democratic_drift: "£western_outlook_campaign_cost_modifier_texticon 每日亲西方主义新增支持率"
@@ -456,8 +456,8 @@
  MODIFIER_NAVAL_STRIKE_ATTACK_NIGHT_FACTOR: "£naval_strike_night_texticon  夜间攻击舰船的攻击"
  MODIFIER_NAVAL_STRIKE_TARGETTING_NIGHT: "£naval_strike_targetting_night_texticon  夜间攻击舰船瞄准"
  MODIFIER_NAVAL_STRIKE_TARGETTING_NIGHT_FACTOR: "£naval_strike_targetting_night_texticon  夜间攻击舰船瞄准"
- MODIFIER_NAVAL_STRIKE_AGILITY_NIGHT: "£speed_destroyer_night_texticon  夜间攻击舰船机动性性"
- MODIFIER_NAVAL_STRIKE_AGILITY_NIGHT_FACTOR: "£speed_destroyer_night_texticon  夜间攻击舰船机动性性"
+ MODIFIER_NAVAL_STRIKE_AGILITY_NIGHT: "£speed_destroyer_night_texticon  夜间袭击舰艇任务机动"
+ MODIFIER_NAVAL_STRIKE_AGILITY_NIGHT_FACTOR: "£speed_destroyer_night_texticon  夜间袭击舰艇任务机动"
  MODIFIER_AIR_RANGE_NIGHT: "£air_range_night_texticon  夜间航程"
  MODIFIER_AIR_RANGE_NIGHT_FACTOR: "£air_range_night_texticon  夜间航程"
  MODIFIER_AIR_RANGE_NIGHT_DESC: "在夜间的航程。"
@@ -507,38 +507,38 @@
  MODIFIER_OPINION_GAIN_MONTHLY_SAME_IDEOLOGY_FACTOR_DESC: "意识形态相同时每月关系改变。"
  MODIFIER_LINE_CHANGE_PRODUCTION_EFFICIENCY_FACTOR: "£production_efficiency_loss_texticon  生产效率保持"
  MODIFIER_LINE_CHANGE_PRODUCTION_EFFICIENCY_FACTOR_DESC: "改变变更生产线所导致的生产效率损失量。"
- MODIFIER_production_speed_infrastructure_factor: "£construction_speed_texticon §Y基礎設施§!建造速度"
- MODIFIER_production_speed_infrastructure_factor_desc: "改变基础设施建设的建造速度。"
- MODIFIER_production_speed_arms_factory_factor: "£construction_speed_texticon §Y军用工厂§!建造速度"
- MODIFIER_production_speed_arms_factory_factor_desc: "改变军用工厂建设的建造速度。"
- MODIFIER_production_speed_industrial_complex_factor: "£construction_speed_texticon §Y民用工厂§!建造速度"
- MODIFIER_production_speed_industrial_complex_factor_desc: "改变民用工厂的建造速度。"
- MODIFIER_production_speed_air_base_factor: "£construction_speed_texticon §Y空军基地§!建造速度"
- MODIFIER_production_speed_air_base_factor_desc: "改变空军基地的建造速度。"
- MODIFIER_production_speed_naval_base_factor: "£construction_speed_texticon §Y海军基地§!建造速度"
- MODIFIER_production_speed_naval_base_factor_desc: "改变海军基地的建造速度。"
- MODIFIER_production_speed_bunker_factor: "£construction_speed_texticon §Y陆上要塞§!建造速度"
- MODIFIER_production_speed_bunker_factor_desc: "改变陆上要塞的建造速度。"
- MODIFIER_production_speed_coastal_bunker_factor: "£construction_speed_texticon §Y海岸要塞§!建造速度"
- MODIFIER_production_speed_coastal_bunker_factor_desc: "改变海岸要塞的建造速度。"
- MODIFIER_production_speed_dockyard_factor: "£construction_speed_texticon §Y海軍船坞§!建造速度"
- MODIFIER_production_speed_dockyard_factor_desc: "改变海军船坞的建造速度。"
- MODIFIER_production_speed_anti_air_building_factor: "£construction_speed_texticon §Y防空火炮§!建造速度"
- MODIFIER_production_speed_anti_air_building_factor_desc: "改变防空火炮的建造速度。"
- MODIFIER_production_speed_synthetic_refinery_factor: "£construction_speed_texticon §Y化学合成厂§!建造速度"
- MODIFIER_production_speed_synthetic_refinery_factor_desc: "改变合成炼油厂的建造速度。"
- MODIFIER_production_speed_radar_station_factor: "£construction_speed_texticon §Y雷达站§!建造速度"
- MODIFIER_production_speed_radar_station_factor_desc: "改变雷达站的建造速度。"
- MODIFIER_production_speed_rocket_site_factor: "£construction_speed_texticon §Y火箭基地§!建造速度"
- MODIFIER_production_speed_rocket_site_factor_desc: "改变火箭基地的建造速度。"
- MODIFIER_production_speed_nuclear_reactor_factor: "£construction_speed_texticon §Y核反应堆§!建造速度"
- MODIFIER_production_speed_nuclear_reactor_factor_desc: "改变核反应堆的建造速度"
- MODIFIER_production_speed_fuel_silo_factor: "£construction_speed_texticon §Y储油罐§!建造速度"
- MODIFIER_production_speed_fuel_silo_factor_desc: "改变储油罐的建造速度。"
- MODIFIER_production_speed_rail_way_factor: "£construction_speed_railway_texticon  §Y铁路§!建造速度"
- MODIFIER_production_speed_rail_way_factor_desc: "改变铁路的建造速度"
- MODIFIER_production_speed_supply_node_factor: "£construction_speed_supplyhub_texticon §Y补给中心§!建造速度"
- MODIFIER_production_speed_supply_node_factor_desc: "改变补给中心的建造速度"
+ MODIFIER_production_speed_infrastructure_factor: "£construction_speed_texticon §Y$infrastructure$§!建造速度"
+ MODIFIER_production_speed_infrastructure_factor_desc: "改变$infrastructure$的建造速度。"
+ MODIFIER_production_speed_arms_factory_factor: "£construction_speed_texticon §Y$arms_factory$§!建造速度"
+ MODIFIER_production_speed_arms_factory_factor_desc: "改变$arms_factory$的建造速度。"
+ MODIFIER_production_speed_industrial_complex_factor: "£construction_speed_texticon §Y$industrial_complex$§!建造速度"
+ MODIFIER_production_speed_industrial_complex_factor_desc: "改变$industrial_complex$的建造速度。"
+ MODIFIER_production_speed_air_base_factor: "£construction_speed_texticon §Y$air_base$§!建造速度"
+ MODIFIER_production_speed_air_base_factor_desc: "改变$air_base$的建造速度。"
+ MODIFIER_production_speed_naval_base_factor: "£construction_speed_texticon §Y$naval_base$§!建造速度"
+ MODIFIER_production_speed_naval_base_factor_desc: "改变$naval_base$的建造速度。"
+ MODIFIER_production_speed_bunker_factor: "£construction_speed_texticon §Y$bunker$§!建造速度"
+ MODIFIER_production_speed_bunker_factor_desc: "改变$bunker$的建造速度。"
+ MODIFIER_production_speed_coastal_bunker_factor: "£construction_speed_texticon §Y$coastal_bunker$§!建造速度"
+ MODIFIER_production_speed_coastal_bunker_factor_desc: "改变$coastal_bunker$的建造速度。"
+ MODIFIER_production_speed_dockyard_factor: "£construction_speed_texticon §Y$dockyard$§!建造速度"
+ MODIFIER_production_speed_dockyard_factor_desc: "改变$dockyard$的建造速度。"
+ MODIFIER_production_speed_anti_air_building_factor: "£construction_speed_texticon §Y$anti_air_building$§!建造速度"
+ MODIFIER_production_speed_anti_air_building_factor_desc: "改变$anti_air_building$的建造速度。"
+ MODIFIER_production_speed_synthetic_refinery_factor: "£construction_speed_texticon §Y$synthetic_refinery$§!建造速度"
+ MODIFIER_production_speed_synthetic_refinery_factor_desc: "改变$synthetic_refinery$的建造速度。"
+ MODIFIER_production_speed_radar_station_factor: "£construction_speed_texticon §Y$radar_station$§!建造速度"
+ MODIFIER_production_speed_radar_station_factor_desc: "改变$radar_station$的建造速度。"
+ MODIFIER_production_speed_rocket_site_factor: "£construction_speed_texticon §Y$rocket_site$§!建造速度"
+ MODIFIER_production_speed_rocket_site_factor_desc: "改变$rocket_site$的建造速度。"
+ MODIFIER_production_speed_nuclear_reactor_factor: "£construction_speed_texticon §Y$nuclear_reactor$§!建造速度"
+ MODIFIER_production_speed_nuclear_reactor_factor_desc: "改变$nuclear_reactor$的建造速度"
+ MODIFIER_production_speed_fuel_silo_factor: "£construction_speed_texticon §Y$fuel_silo$§!建造速度"
+ MODIFIER_production_speed_fuel_silo_factor_desc: "改变$fuel_silo$的建造速度。"
+ MODIFIER_production_speed_rail_way_factor: "£construction_speed_railway_texticon  §Y$rail_way$§!建造速度"
+ MODIFIER_production_speed_rail_way_factor_desc: "改变$rail_way$的建造速度"
+ MODIFIER_production_speed_supply_node_factor: "£construction_speed_supplyhub_texticon §Y$supply_node$§!建造速度"
+ MODIFIER_production_speed_supply_node_factor_desc: "改变$supply_node$的建造速度"
  MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY: "£prod_eff_cap 生产效率上限"
  MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY_DESC: "通过在单一生产线上大量生产产品，就可以到达生产效率上限。"
  MODIFIER_PRODUCTION_FACTORY_START_EFFICIENCY_FACTOR: "£efficiency_base_texticon 基础生产效率"
@@ -611,7 +611,7 @@
  MODIFIER_TECH_AIR_DAMAGE_FACTOR: "£anti_air_gun_texticon  防空轰炸的伤害减少"
  MODIFIER_TECH_AIR_DAMAGE_FACTOR_DESC: "拥有技术优势可以提高我们防空火砲的效率。"
  MODIFIER_INDUSTRY_REPAIR_FACTOR: "£repair_civ_factory_texticon 工厂修复速度"
- MODIFIER_INDUSTRY_REPAIR_FACTOR_DESC: "改变§H民用工厂§!修复建筑时的产出"
+ MODIFIER_INDUSTRY_REPAIR_FACTOR_DESC: "改变§H$industrial_complex$§!修复建筑时的产出"
  MODIFIER_PRODUCTION_OIL_FACTOR: "£oil_texticon  合成油"
  MODIFIER_MAX_TRAINING_XP_FACTOR: "£training_max_texticon  最大训练"
  MODIFIER_MIN_EXPORT_FACTOR: "£traded_goods_texticon  可出口资源"
@@ -910,7 +910,7 @@
  MODIFIER_ATTACK_BONUS_AGAINST_A_COUNTRY: " £attack_texticon 我国对其进攻修正"
  MODIFIER_ATTACK_BONUS_AGAINST_A_COUNTRY_ON_ITS_CORES: "£attack_core_texticon 我国对其核心领土进攻"
  MODIFIER_DEFENSE_BONUS_AGAINST_A_COUNTRY: " £defence_texticon 我国对其防御修正"
- MODIFIER_CIVILIAN_FACTORY_USE: "£civ_factory 民用工厂使用"
+ MODIFIER_CIVILIAN_FACTORY_USE: "£civ_factory $industrial_complex$使用"
  MODIFIER_ARMY_LEADER_MAX_ARMY_SIZE: "£divisions_texticon 所辖部队的最大规模"
  MODIFIER_ARMY_GROUP_LEADER_MAX_ARMY_SIZE: "£divisions_texticon 所辖部队的最大规模"
  MODIFIER_ARMY_LEADER_MAX_ARMY_GROUP_SIZE: "£divisions_texticon 所辖集团军的最大规模"
@@ -1010,9 +1010,9 @@
  MODIFIER_BASE_FUEL_GAIN_FACTOR: "燃油获得"
  MODIFIER_BASE_FUEL_GAIN_ADD: "燃油获得"
  MODIFIER_FUEL_COST: "燃油消耗"
- MODIFIER_INDUSTRIAL_FACTORY_DONATIONS: "民用工厂捐赠"
- MODIFIER_MILITARY_FACTORY_DONATIONS: "军用工厂捐赠"
- MODIFIER_DOCKYARD_DONATIONS: "海军船坞捐赠"
+ MODIFIER_INDUSTRIAL_FACTORY_DONATIONS: "£civ_factory $industrial_complex$捐赠"
+ MODIFIER_MILITARY_FACTORY_DONATIONS: "£mil_factory $arms_factory$捐赠"
+ MODIFIER_DOCKYARD_DONATIONS: "£dockyard_texticon $dockyard$捐赠"
  MODIFIER_NAVAL_VISIBILITY_FACTOR: "£spotting_night_texticon 可见度"
  MODIFIER_NAVAL_CASUALTY_ON_HIT_FACTOR: "£critical_hit_texticon 受到攻击造成的伤亡"
  MODIFIER_NAVAL_CASUALTY_ON_SINK_FACTOR: "£critical_hit_texticon  舰船沉没造成的伤亡"
@@ -1145,17 +1145,17 @@
  ENEMY_SPY_NETWORK_GROWTH: "£spy_network_gain_enemy_texticon 敌方间谍网增长"
  NO_COMPLIANCE_GAIN: "无顺从度增长"
  resource_sabotage_decrease_tooltip: " £sabotaged_resource_texticon  资源破坏几率：§G-25%§!\n  £sabotaged_resource_texticon 资源破坏时长：§G-25%§!"
- factory_sabotage_decrease_tooltip: "  £civ_factory_sabotage 民用工厂破坏几率：§G-25%§!\n  £mil_factory_sabotage 军用工厂破坏几率：§G-25%§!"
+ factory_sabotage_decrease_tooltip: "  £civ_factory_sabotage $industrial_complex$破坏几率：§G-25%§!\n  £mil_factory_sabotage $arms_factory$破坏几率：§G-25%§!"
  resource_sabotage_decrease_tooltip_ADDED: "  £sabotaged_resource_texticon 资源破坏几率：§G-25%§!（§G-25%§!）\n  £sabotaged_resource_texticon 资源破坏时长：§G-25%§!（§G-25%§!）"
- factory_sabotage_decrease_tooltip_ADDED: "  £civ_factory_sabotage 民用工厂破坏几率：§G-25%§!（§G-25%§!）\n  £mil_factory_sabotage 军用工厂破坏几率：§G-25%§!（§G-25%§!）"
+ factory_sabotage_decrease_tooltip_ADDED: "  £civ_factory_sabotage $industrial_complex$破坏几率：§G-25%§!（§G-25%§!）\n  £mil_factory_sabotage $arms_factory$破坏几率：§G-25%§!（§G-25%§!）"
  resource_sabotage_decrease_tooltip_REMOVED: "  £sabotaged_resource_texticon 资源破坏几率：§H+0%§!（§R+25%§!）\n  £sabotaged_resource_texticon 资源破坏时长：§H+0%§!（§R+25%§!）"
- factory_sabotage_decrease_tooltip_REMOVED: " £civ_factory_sabotage  民用工厂破坏几率：§H+0%§!（§R+25%§!）\n  £mil_factory_sabotage 军用工厂破坏几率：§H+0%§!（§R+25%§!）"
+ factory_sabotage_decrease_tooltip_REMOVED: " £civ_factory_sabotage  $industrial_complex$破坏几率：§H+0%§!（§R+25%§!）\n£mil_factory_sabotage  $arms_factory$破坏几率：§H+0%§!（§R+25%§!）"
  resource_sabotage_decrease_tooltip_UNCHANGED: "  £sabotaged_resource_texticon 资源破坏几率：§G-25%§!（§H+0%§!）\n  £sabotaged_resource_texticon 资源破坏时长：§G-25%§!（§H+0%§!）"
- factory_sabotage_decrease_tooltip_UNCHANGED: "  £civ_factory_sabotage 民用工厂破坏几率：§G-25%§!（§H+0%§!）\n £mil_factory_sabotage  军用工厂破坏几率：§G-25%§!（§H+0%§!）"
- modifier_repair_speed_infrastructure_factor: "£repair_infrastructure_texticon §Y基础设施§!修复速度"
- modifier_repair_speed_industrial_complex_factor: "£repair_civ_factory_texticon §Y民用工厂§!修复速度"
- modifier_repair_speed_arms_factory_factor: "£repair_mil_factory_texticon §Y军用工厂§!修复速度"
- modifier_repair_speed_rail_way_factor: "£repair_infrastructure_texticon §Y铁路§!维修速度"
+ factory_sabotage_decrease_tooltip_UNCHANGED: "  £civ_factory_sabotage $industrial_complex$破坏几率：§G-25%§!（§H+0%§!）\n £mil_factory_sabotage $arms_factory$破坏几率：§G-25%§!（§H+0%§!）"
+ modifier_repair_speed_infrastructure_factor: "£repair_infrastructure_texticon §Y$infrastructure$§!修复速度"
+ modifier_repair_speed_industrial_complex_factor: "£repair_civ_factory_texticon §Y$industrial_complex$§!修复速度"
+ modifier_repair_speed_arms_factory_factor: "£repair_mil_factory_texticon §Y$arms_factory$§!修复速度"
+ modifier_repair_speed_rail_way_factor: "£repair_infrastructure_texticon §Y$rail_way$§!维修速度"
  MODIFIER_CIVILIAN_INTEL_FACTOR: "£civilian_intel_texticon  民政情报"
  MODIFIER_ARMY_INTEL_FACTOR: "£army_intel_texticon  陆军情报"
  MODIFIER_NAVY_INTEL_FACTOR: "£navy_intel_texticon  海军情报"
@@ -1794,7 +1794,7 @@
  experience_gain_mechanized_combat_factor: "£experience_neutral_combat_texticon 战斗中获取的机械化经验"
  experience_gain_infantry_combat_factor: "£experience_neutral_combat_texticon  战斗中获取的步兵经验"
  experience_gain_artillery_combat_factor: "£experience_neutral_combat_texticon  战斗中获取的火炮经验"
- production_cost_supply_node_factor: "£under_construction_texticon §Y补给中心§!建造花费"
+ production_cost_supply_node_factor: "£under_construction_texticon §Y$supply_node$§!建造花费"
  production_cost_supply_node_factor_desc: "改变补给中心建造花费"
  SUPPLY_PENALTY_ON_CORE: "£supply_consumption_core_texticon 核心领土战斗补给耗尽惩罚"
  supply_combat_penalties_on_core_factor: "核心领土战斗补给耗尽惩罚"
@@ -2087,15 +2087,15 @@
  productivity_and_employment_modifier: "生产率和就业的综合效应"
  total_workforce_modifier: "劳动力规模"
  high_unemployment_modifier: "最高失业"
- civ_facs_worker_requirement_modifier: "民用工厂劳动力需求"
- mil_facs_worker_requirement_modifier: "军用工厂和海军船坞劳动力需求"
- offices_worker_requirement_modifier: "办公园区劳动力需求"
+ civ_facs_worker_requirement_modifier: "$industrial_complex$ 劳动力需求"
+ mil_facs_worker_requirement_modifier: "$arms_factory$和$dockyard$ 劳动力需求"
+ offices_worker_requirement_modifier: "$offices$ 劳动力需求"
  buildings_worker_requirement_cmodifier: "所有建筑物劳动力需求"
  productivity_growth_modifier: "每月生产率增长"
- civilian_factories_productivity: "§Y民用工厂§!生产率"
- military_factories_productivity: "§Y军用工厂§!生产率"
- dockyard_productivity: "§Y海军船坞§!生产率"
- offices_productivity: "§Y办公园区§!生产率"
+ civilian_factories_productivity: "§Y$industrial_complex$§!生产率"
+ military_factories_productivity: "§Y$arms_factory$§!生产率"
+ dockyard_productivity: "§Y$dockyard$§!生产率"
+ offices_productivity: "§Y$offices$§!生产率"
  agricolture_productivity_modifier: "农业生产率"
  high_unemployment_threshold_modifier: "最高失业阈值"
  resource_sector_workers_modifier: "资源开采所需的工人"
@@ -2105,7 +2105,7 @@
  modifier_experience_gain_heavy_frigate_combat_factor: "£experience_neutral_combat_texticon 重护卫舰经验增长"
  modifier_experience_gain_patrol_boat_training_factor: "£experience_neutral_training_texticon 巡逻艇经验增长"
  modifier_experience_gain_patrol_boat_combat_factor: "£experience_neutral_combat_texticon 巡逻艇经验增长"
- modifier_repair_speed_dockyard_factor: "£repair_civ_factory_texticon §Y船坞§!修复速度"
+ modifier_repair_speed_dockyard_factor: "£repair_civ_factory_texticon §Y$dockyard$§!修复速度"
  modifier_experience_gain_L_Marine_Bat_combat_factor: "£experience_neutral_combat_texticon 轻装海军陆战步兵战斗经验增长"
  modifier_experience_gain_Mot_Marine_Bat_combat_factor: "£experience_neutral_combat_texticon 摩托化海军陆战步兵战斗经验增长"
  modifier_experience_gain_Mech_Marine_Bat_combat_factor: "£experience_neutral_combat_texticon 机械化海军陆战队战斗经验增长"
@@ -2130,15 +2130,15 @@
  Rhizome_Manoeuver_preferred_weight_factor: "若为偏好战术，则额外发动§Y根茎机动§!的概率"
  state_renewable_energy_generation_modifier: "省份可再生能源发电系数"
  battery_park_storage_size_modifier: "储能园区容量修正"
- modifier_repair_speed_air_base_factor: "£repair_infrastructure_texticon §Y空军基地§!修复速度"
- modifier_repair_speed_naval_base_factor: "£repair_infrastructure_texticon §Y海军基地§!修复速度"
- modifier_production_cost_infrastructure_factor: "£construction_speed_infrastructure_texticon §Y基础设施§!建造成本"
- modifier_production_cost_industrial_complex_factor: "£construction_speed_civfactory_texticon §Y民用工厂§!建造成本"
- modifier_production_cost_arms_factory_factor: "£construction_speed_milfactory_texticon §Y军用工厂§!建造成本"
- modifier_production_cost_rail_way_factor: "£construction_speed_railway_texticon §Y铁路§!建造成本"
- modifier_production_cost_dockyard_factor: "£construction_speed_dockyard_texticon §Y船坞§!建造成本"
- modifier_production_cost_air_base_factor: "£construction_speed_airbase_texticon §Y空军基地§!建造成本"
- modifier_production_cost_naval_base_factor: "£construction_speed_navalbase_texticon §Y海军基地§!建造成本"
+ modifier_repair_speed_air_base_factor: "£repair_infrastructure_texticon §Y$air_base$§!修复速度"
+ modifier_repair_speed_naval_base_factor: "£repair_infrastructure_texticon §Y$naval_base$§!修复速度"
+ modifier_production_cost_infrastructure_factor: "£construction_speed_infrastructure_texticon §Y$infrastructure$§!建造成本"
+ modifier_production_cost_industrial_complex_factor: "£construction_speed_civfactory_texticon §Y$industrial_complex$§!建造成本"
+ modifier_production_cost_arms_factory_factor: "£construction_speed_milfactory_texticon §Y$arms_factory$§!建造成本"
+ modifier_production_cost_rail_way_factor: "£construction_speed_railway_texticon §Y$rail_way$§!建造成本"
+ modifier_production_cost_dockyard_factor: "£construction_speed_dockyard_texticon §Y$dockyard$§!建造成本"
+ modifier_production_cost_air_base_factor: "£construction_speed_airbase_texticon §Y$air_base$§!建造成本"
+ modifier_production_cost_naval_base_factor: "£construction_speed_navalbase_texticon §Y$naval_base$§!建造成本"
  influence_coup_modifier: "£foreign_influence_auto_influence_cap_modifier_texticon §Y外国影响§!政变成功几率修正"
  foreign_influence_continent_modifier: "£foreign_influence_modifier_texticon 本土大陆之外§Y外国影响力§!"
  foreign_influence_home_continent_modifier: "£foreign_influence_modifier_texticon 本土大陆§Y外国影响力§!"
@@ -2166,3 +2166,7 @@
  migration_rate_value_factor: "§Y净移民率§!数值系数"
  popularity_attack_modifier: "£world_tension_wargoal_texticon §H党派支持度攻击§!修正"
  popularity_boost_modifier: "£return_on_investment_modifier_texticon §H党派支持度提升§!修正"
+ modifier_production_speed_offices_factor_desc: "改变$offices$的建造速度"
+ modifier_production_speed_anti_air_building_factor_desc: "改变$anti_air_building$的建造速度。"
+ modifier_production_speed_radar_station_factor_desc: "改变$radar_station$的建造速度。"
+ modifier_production_speed_internet_station_factor_desc: "改变$internet_station$的建造速度"
