--- a/localisation/french/MD_focus_BLR_l_french.yml
+++ b/localisation/french/MD_focus_BLR_l_french.yml
@@ -603,13 +603,13 @@
  BLR_crackdown_opp_rall_desc: "Nous dispersons activement les rassemblements de nos opposants politiques mécontents des élections."
  BLR_Increased_censorship: "Renforcer la censure des médias"
  BLR_Increased_censorship_desc: "Il est nécessaire de procéder à une censure sévère des médias afin que nos opposants ne puissent pas s'agiter contre nous."
- BLR_concept_national_security_Belarus: "National Security Concept"
- BLR_concept_national_security_Belarus_desc: "This Concept establishes a set of official views on the essence and content of the activities of the Republic of Belarus to ensure the balance of interests of the individual, society, and the state and their protection from internal and external threats."
- BLR_Economic_development_2001_2005: "Program of Socio-Economic Development"
- BLR_Economic_development_2001_2005_desc: "The program of socio-economic development of the Republic of Belarus for 2001-2005. developed by the Ministry of Economy of the Republic of Belarus jointly with other ministries and republican state administration bodies, regional executive committees and the Minsk City Executive Committee with the participation of the National Academy of Sciences, the National Bank, specialized research institutes and public organizations in accordance with the Law of the Republic of Belarus \"On State Forecasting and Programs of Socio-Economic Development of the Republic of Belarus\" and resolutions of the Council of Ministers of the Republic of Belarus Belarus of February 2, 2000 N 141 and of August 10, 2000 No. 1248 on the development of the Program of socio-economic development of the Republic of Belarus for 2001-2005."
- BLR_reforms_Belarusian_Railway: "Reforms of the Belarusian Railway"
- BLR_reforms_Belarusian_Railway_desc: "Our Railways are in a very terrible state, so we will carry out a set of reforms to improve the situation"
- BLR_new_railway_station: "New Minsk Railway Station"
+ BLR_concept_national_security_Belarus: "Concept de sécurité nationale"
+ BLR_concept_national_security_Belarus_desc: "Ce concept établit un ensemble de vues officielles sur l’essence et le contenu des activités de la République de Biélorussie pour assurer l’équilibre des intérêts de l’individu, de la société et de l’État et leur protection contre les menaces internes et externes."
+ BLR_Economic_development_2001_2005: "Programme de développement socio-économique"
+ BLR_Economic_development_2001_2005_desc: "Le programme de développement socio-économique de la République de Biélorussie pour 2001-2005. élaboré par le Ministère de l'Economie de la République de Biélorussie conjointement avec d'autres ministères et organes de l'administration d'État républicaine, les comités exécutifs régionaux et le Comité exécutif de la ville de Minsk avec la participation de l'Académie nationale des sciences, la Banque nationale, les instituts de recherche spécialisés et les organisations publiques conformément à la loi de la République de Biélorussie \"Sur les prévisions d'État et les programmes de développement socio-économique de la République de Biélorussie\" et les résolutions du Conseil des ministres de la République de Biélorussie du 2 février 2000 N 141 et du 10 août 2000 n° 1248 sur l'élaboration du Programme de développement socio-économique de la République de Biélorussie pour 2001-2005."
+ BLR_reforms_Belarusian_Railway: "Réformes des chemins de fer biélorusses"
+ BLR_reforms_Belarusian_Railway_desc: "Nos chemins de fer sont dans un état très lamentable, nous allons donc mener une série de réformes pour améliorer la situation"
+ BLR_new_railway_station: "Nouvelle gare de Minsk"
  BLR_new_railway_station_desc: "We have built a new train station in Minsk, now our city will be able to receive more trains"
  BLR_Electrification_Myslishche_Kryzhovka: "Electrification of the Myslyshche — Kryzhovka"
  BLR_Electrification_Myslishche_Kryzhovka_desc: "Path of Myslishche — Kryzhovka is one of the most priority for development in our country, so we will pay attention to it very first"
@@ -747,8 +747,6 @@
  BLR_People_Militia_desc: "We are ready to adopt a law on the creation of a people's militia, which will be a kind of reserve for Territorial defense. In each village, village there should be a trained group of people to counter the enemy, with subsequent transformation into a partisan movement"
  BLR_Excursion_Warsaw: "Excursion to Warsaw"
  BLR_Excursion_Warsaw_desc: "Wagnerians actively agitate and complain about the desire to arrange an \"excursion\" to Warsaw. We can help them organize it. A breakthrough of the border from our territory is theoretically possible, but will Poland declare war on us after this?"
- BLR_Excursion_Vilnus: "Excursion to Vilnius"
- BLR_Excursion_Vilnus_desc: "Wagnerians actively agitate and complain about the desire to arrange an \"excursion\" to Vilnius. We can help them organize it. A breakthrough of the border from our territory is theoretically possible, but will Poland declare war on us after this?"
  BLR_azarenok_tv: "New Propagandist of Lukashenko"
  BLR_azarenok_tv_desc: "Now on television you can often see a new propagandist who broadcasts on behalf of our party and convinces the people of the correctness of our actions"
  BLR_Wagner_arrest: "Situation With Pmcs Wagner"
@@ -765,8 +763,6 @@
  BLR_Operation_O_desc: "Recent military exercises have shown that our army is quite capable of performing more ambitious tasks than the defense of a certain territory. Lithuania has been using its geographical position in recent years - it is putting pressure on us and Russia, perhaps we can persuade Russia to participate in our adventure, because Lithuania does not have a large defensive alliance behind it"
  BLR_Military_Exercises_Union: "Exercises \"Allied Determination\""
  BLR_Military_Exercises_Union_desc: "Joint military exercises of the Armed Forces of the Russian Federation and the Armed Forces of the Republic of Belarus, which are held on the territory of Belarus"
- BLR_Need_vilnus: "Vilnius to the native harbor"
- BLR_Need_vilnus_desc: "The outcome of our special operation turned out to be unsatisfactory for us, so we intend to achieve our goal and appeal to Russia with a request to transfer Vilyunsa under our control"
  BLR_army_on_streets_of_cities: "Mass Protests"
  BLR_army_on_streets_of_cities_desc: "The people rebelled against us, they believe that our government is faking votes in elections and ruining the country in every way. I hope we have prepared well for such events"
  BLR_Kolya: "Kolya Lukashenko"
@@ -777,10 +773,6 @@
  BLR_PR_company_desc: "New president needs a large-scale PR company. Where we will use all our resources to highlight the advantages of his coming to power"
  BLR_Russia_nuclear: "Russian Nuclear Weapons"
  BLR_Russia_nuclear_desc: "Russia is ready to deploy its nuclear weapons here, do we agree?"
- Basic_Law_BLR: "The Basic Law of belarus SAR"
- Basic_Law_BLR_desc: "The Basic Law of the Belarus Special Administrative Region of the People's Republic of China is the constitutional document of Belarus, replacing the Constitution of Belarus. In accordance with Article 31 of the Constitution of the People's Republic of China, Belarus has special administrative region status, which provides constitutional guarantees for implementing the policy of \"one country, two systems\" and the constitutional basis for enacting the Basic Law of the Belarus Special Administrative Region. "
- One_Country_Two_Systems_BLR: "One Country Two Systems"
- One_Country_Two_Systems_BLR_desc: "The model of One country - Two systems, perfectly shows itself on the example of Macau and Hong Kong. In Belarus, however, it does not undergo much changes, rather it is even simplified, because it turned out that the ideology of China has quite taken root in this European country."
  BLR_anti_lgbtqa_stance: "Politique anti-LGBT"
  BLR_Pazniak: "§YBelarusian Nationalists§!"
  BLR_Pazniak_desc: "Nationalist forces seized power in the country. Where will they lead Belarus? Towards a brighter future or the collapse of the country?"
@@ -1038,14 +1030,12 @@
  BLR_latgale_claims: "Territorial Claims to §Y[LAT.GetNamewithFlag]§!"
  BLR_Litva_belarusization_category: "Integration of New Lands"
  BLR_Litva_belarusization_category_desc: "New lands need to be integrated into our state. The revival of the Litvinov nation is undoubtedly a risky project, but it can be the key to creating a powerful state"
- BLR_vilnus_return: "Integration of Vilnus"
  BLR_samogitia_return: "Integration of Samogitia"
  BLR_sudovia_return: "Integration of Sudovia"
  BLR_klaipeda_return: "Integration of Klaipeda"
  BLR_latgale_return: "Integration of Latgale"
  BLR_Litva_belarusizations_category: "Integration of Lithuania"
  BLR_Litva_belarusizations_category_desc: "Lithuania has always been and will always be a Belarusian land. We will return these lands to the Belarusian people"
- BLR_vilnus_returns: "Integration of Vilnus"
  BLR_samogitia_returns: "Integration of Samogitia"
  BLR_sudovia_returns: "Integration of Sudovia"
  BLR_klaipeda_returns: "Integration of Klaipeda"
@@ -1059,8 +1049,6 @@
  BLR_fly_protasevich: "Land a Ryanair Plane With Protasevich"
  BLR_Deal_with_Poland: "Deal With the Union of Poles"
  BLR_Great_stone_china: "Great Stone Park"
- BLR_belorusisation_vilnus: "Belarusianization of Vilnius"
- BLR_belorusisation_vilnus_desc: "Vilnius has long been a disputed region that we wanted to possess, but now that we have mastered it, we are ready to promote to the masses the idea of settling the region with Belarusians."
  BLR_belorusisation_sudovia: "Belarusianization of Sudovia"
  BLR_belorusisation_klaipeda: "Belarusianization of Klaipeda"
  BLR_belorusisation_samogitia: "Belarusianization of Samogitia"
@@ -2026,7 +2014,7 @@
  belarus_another.48.d: "Our government was shocked by the news that the fighters of the Wagner SMP attacked our country. They came from the territory of Belarus, which gives us a good reason to declare war on them. Will we go for it?"
  belarus_another.48.a: "It's time to end Belarus"
  belarus_another.48.b: "It is not necessary to declare war"
- belarus_another.49.t: "\"Excursion to Vilnus\""
+ belarus_another.49.t: "\"Excursion to Vilnius\""
  belarus_another.49.d: "With the assistance of our border guards, SMP Wagner broke through the border of Lithuania and entered its territory. What no one expected began"
  belarus_another.49.a: "Summer and Crossbows"
  belarus_another.52.t: "Jeans Revolution"
@@ -2294,5 +2282,11 @@
  ARM_armenia_ready_union_state: "§Y[?ARM.union_state|-0]§!"
  ARM_armenia_readys_union_state: "§YPercentage§! of §Y[ARM.GetNameWithFlag]§! readiness to integrate into the §YUnion State§!"
  ARM_armenia_notreadys_union_state: "§RINDISPONIBLE§!"
- BLR_constitution_BSSR: "The Constitution Of BSSR"
- BLR_constitution_BSSR_desc: "To begin with, it is necessary to restore the Constitution of the BSSR"
+ BLR_constitution_BSSR: "La Constitution de la RSS de Biélorussie"
+ BLR_constitution_BSSR_desc: "Pour commencer, il est nécessaire de rétablir la Constitution de la BSSR"
+ BLR_Excursion_Vilnius: "Excursion à Vilnius"
+ BLR_Excursion_Vilnius_desc: "Les wagnériens se mobilisent activement et se plaignent de la volonté d'organiser une « excursion » à Vilnius. Nous pouvons les aider à l'organiser. Une percée de la frontière depuis notre territoire est théoriquement possible, mais la Pologne va-t-elle nous déclarer la guerre après cela ?"
+ BLR_vilnius_return: "Intégration de Vilnius"
+ BLR_vilnius_returns: "Intégration de Vilnius"
+ BLR_belorusisation_vilnius: "Biélorussienisation de Vilnius"
+ BLR_belorusisation_vilnius_desc: "Vilnius a longtemps été une région disputée que nous voulions posséder, mais maintenant que nous l’avons maîtrisée, nous sommes prêts à promouvoir auprès des masses l’idée de peupler la région avec des Biélorusses."
