--- a/localisation/french/replace/replaced_from_vanilla_modifiers_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_modifiers_l_french.yml
@@ -20,8 +20,8 @@
  modifier_production_speed_synthetic_refinery_factor: "£construction_speed_texticon Vitesse de construction de §Y$synthetic_refinery$§!"
  modifier_production_speed_synthetic_refinery_factor_desc: "Modifie la vitesse de construction de $synthetic_refinery$."
  modifier_production_speed_radar_station_factor: "£construction_speed_texticon Vitesse de construction de §Y$radar_station$§!"
- modifier_production_speed_rocket_site_factor: "£construction_speed_texticon Vitesse de construction de §Y$anti_air_building$§!"
- modifier_production_speed_rocket_site_factor_desc: "Modifie la vitesse de construction du Site de Batterie Anti-Aérienne."
+ modifier_production_speed_rocket_site_factor: "£construction_speed_texticon Vitesse de construction de §Y$rocket_site$§!"
+ modifier_production_speed_rocket_site_factor_desc: "Modifie la vitesse de construction de §Y$rocket_site$§!."
  modifier_production_speed_internet_station_factor: "£construction_speed_texticon Vitesse de construction de §Y$internet_station$§!"
  communism_drift: "£emerging_outlook_campaign_cost_modifier_texticon Soutien quotidien à l'émergence"
  democratic_drift: "£western_outlook_campaign_cost_modifier_texticon Soutien quotidien pro-occidental"
@@ -545,38 +545,38 @@
  MODIFIER_OPINION_GAIN_MONTHLY_SAME_IDEOLOGY_FACTOR_DESC: "Changement d'opinion mensuel si même idéologie."
  MODIFIER_LINE_CHANGE_PRODUCTION_EFFICIENCY_FACTOR: "£production_efficiency_loss_texticon  Rétention de l'efficacité de production"
  MODIFIER_LINE_CHANGE_PRODUCTION_EFFICIENCY_FACTOR_DESC: "Changement de la perte d'efficacité de production lors du changement de ce qu'une ligne de production produit."
- MODIFIER_production_speed_infrastructure_factor: "£construction_speed_texticon  Vitesse de construction de §YInfrastructure§!"
- MODIFIER_production_speed_infrastructure_factor_desc: "Modifie la vitesse de construction de l'infrastructure."
- MODIFIER_production_speed_arms_factory_factor: "£construction_speed_texticon  Vitesse de construction de §YUsine militaire§!"
- MODIFIER_production_speed_arms_factory_factor_desc: "Modifie la vitesse de construction de l'usine militaire."
- MODIFIER_production_speed_industrial_complex_factor: "£construction_speed_texticon  Vitesse de construction de §YUsine civile§!"
- MODIFIER_production_speed_industrial_complex_factor_desc: "Modifie la vitesse de construction de l'usine civile."
- MODIFIER_production_speed_air_base_factor: "£construction_speed_texticon  Vitesse de construction de §YBase aérienne§!"
- MODIFIER_production_speed_air_base_factor_desc: "Modifie la vitesse de construction de la base aérienne."
- MODIFIER_production_speed_naval_base_factor: "£construction_speed_texticon  Vitesse de construction de §YBase navale§!"
- MODIFIER_production_speed_naval_base_factor_desc: "Modifie la vitesse de construction de la base navale."
- MODIFIER_production_speed_bunker_factor: "£construction_speed_texticon  Vitesse de construction de §YFort terrestre§!"
- MODIFIER_production_speed_bunker_factor_desc: "Modifie la vitesse de construction du bunker."
- MODIFIER_production_speed_coastal_bunker_factor: "£construction_speed_texticon  Vitesse de construction de §YFort côtier§!"
- MODIFIER_production_speed_coastal_bunker_factor_desc: "Modifie la vitesse de construction du fort côtier."
- MODIFIER_production_speed_dockyard_factor: "£construction_speed_texticon  Vitesse de construction de §YChantier naval§!"
- MODIFIER_production_speed_dockyard_factor_desc: "Modifie la vitesse de construction du chantier naval."
- MODIFIER_production_speed_anti_air_building_factor: "£construction_speed_texticon  Vitesse de construction de §YAnti-aérien§!"
- MODIFIER_production_speed_anti_air_building_factor_desc: "Modifie la vitesse de construction de l'anti-aérien."
- MODIFIER_production_speed_synthetic_refinery_factor: "£construction_speed_texticon  Vitesse de construction de §YRaffinerie§!"
- MODIFIER_production_speed_synthetic_refinery_factor_desc: "Modifie la vitesse de construction de la raffinerie."
- MODIFIER_production_speed_radar_station_factor: "£construction_speed_texticon  Vitesse de construction de §YStation radar§!"
- MODIFIER_production_speed_radar_station_factor_desc: "Modifie la vitesse de construction de la station radar."
- MODIFIER_production_speed_rocket_site_factor: "£construction_speed_texticon  Vitesse de construction de §YSite de roquettes§!"
- MODIFIER_production_speed_rocket_site_factor_desc: "Modifie la vitesse de construction du site de roquettes."
- MODIFIER_production_speed_nuclear_reactor_factor: "£construction_speed_texticon  Vitesse de construction de §YRéacteur nucléaire§!"
- MODIFIER_production_speed_nuclear_reactor_factor_desc: "Modifie la vitesse de construction du réacteur nucléaire."
- MODIFIER_production_speed_fuel_silo_factor: "£construction_speed_texticon  Vitesse de construction de §YSilo à carburant§!"
- MODIFIER_production_speed_fuel_silo_factor_desc: "Modifie la vitesse de construction du silo à carburant."
- MODIFIER_production_speed_rail_way_factor: "£construction_speed_railway_texticon  Vitesse de construction de §YChemin de fer§!"
- MODIFIER_production_speed_rail_way_factor_desc: "Modifie la vitesse de construction du chemin de fer."
- MODIFIER_production_speed_supply_node_factor: "£construction_speed_supplyhub_texticon  Vitesse de construction de §YNoeud logistique§!"
- MODIFIER_production_speed_supply_node_factor_desc: "Modifie la vitesse de construction du noeud logistique."
+ MODIFIER_production_speed_infrastructure_factor: "£construction_speed_texticon  Vitesse de construction de §Y$infrastructure$§!"
+ MODIFIER_production_speed_infrastructure_factor_desc: "Modifie la vitesse de construction de $infrastructure$."
+ MODIFIER_production_speed_arms_factory_factor: "£construction_speed_texticon  Vitesse de construction de §Y$arms_factory$§!"
+ MODIFIER_production_speed_arms_factory_factor_desc: "Modifie la vitesse de construction de $arms_factory$."
+ MODIFIER_production_speed_industrial_complex_factor: "£construction_speed_texticon  Vitesse de construction de §Y$industrial_complex$§!"
+ MODIFIER_production_speed_industrial_complex_factor_desc: "Modifie la vitesse de construction de $industrial_complex$."
+ MODIFIER_production_speed_air_base_factor: "£construction_speed_texticon  Vitesse de construction de §Y$air_base$e§!"
+ MODIFIER_production_speed_air_base_factor_desc: "Modifie la vitesse de construction de $air_base$."
+ MODIFIER_production_speed_naval_base_factor: "£construction_speed_texticon  Vitesse de construction de §Y$naval_base$§!"
+ MODIFIER_production_speed_naval_base_factor_desc: "Modifie la vitesse de construction de $naval_base$."
+ MODIFIER_production_speed_bunker_factor: "£construction_speed_texticon  Vitesse de construction de §Y$bunker$§!"
+ MODIFIER_production_speed_bunker_factor_desc: "Modifie la vitesse de construction de $bunker$."
+ MODIFIER_production_speed_coastal_bunker_factor: "£construction_speed_texticon  Vitesse de construction de §Y$coastal_bunker$§!"
+ MODIFIER_production_speed_coastal_bunker_factor_desc: "Modifie la vitesse de construction de $coastal_bunker$."
+ MODIFIER_production_speed_dockyard_factor: "£construction_speed_texticon  Vitesse de construction de §Y$dockyard$§!"
+ MODIFIER_production_speed_dockyard_factor_desc: "Modifie la vitesse de construction de $dockyard$."
+ MODIFIER_production_speed_anti_air_building_factor: "£construction_speed_texticon  Vitesse de construction de §Y$anti_air_building$§!"
+ MODIFIER_production_speed_anti_air_building_factor_desc: "Modifie la vitesse de construction de $anti_air_building$."
+ MODIFIER_production_speed_synthetic_refinery_factor: "£construction_speed_texticon  Vitesse de construction de §Y$synthetic_refinery$§!"
+ MODIFIER_production_speed_synthetic_refinery_factor_desc: "Modifie la vitesse de construction de $synthetic_refinery$."
+ MODIFIER_production_speed_radar_station_factor: "£construction_speed_texticon  Vitesse de construction de §Y$radar_station$§!"
+ MODIFIER_production_speed_radar_station_factor_desc: "Modifie la vitesse de construction de $radar_station$."
+ MODIFIER_production_speed_rocket_site_factor: "£construction_speed_texticon  Vitesse de construction de §Y$rocket_site$§!"
+ MODIFIER_production_speed_rocket_site_factor_desc: "Modifie la vitesse de construction de $rocket_site$."
+ MODIFIER_production_speed_nuclear_reactor_factor: "£construction_speed_texticon  Vitesse de construction de §Y$nuclear_reactor$§!"
+ MODIFIER_production_speed_nuclear_reactor_factor_desc: "Modifie la vitesse de construction de $nuclear_reactor$."
+ MODIFIER_production_speed_fuel_silo_factor: "£construction_speed_texticon  Vitesse de construction de §Y$fuel_silo$§!"
+ MODIFIER_production_speed_fuel_silo_factor_desc: "Modifie la vitesse de construction de $fuel_silo$."
+ MODIFIER_production_speed_rail_way_factor: "£construction_speed_railway_texticon  Vitesse de construction de §Y$rail_way$§!"
+ MODIFIER_production_speed_rail_way_factor_desc: "Modifie la vitesse de construction de $rail_way$."
+ MODIFIER_production_speed_supply_node_factor: "£construction_speed_supplyhub_texticon  Vitesse de construction de §Y$supply_node$§!"
+ MODIFIER_production_speed_supply_node_factor_desc: "Modifie la vitesse de construction de $supply_node$."
  MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY: "£prod_eff_cap  Limite de productivité"
  MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY_DESC: "Efficacité de production maximale qui peut être atteinte en produisant en masse des articles sur une seule ligne de production."
  MODIFIER_PRODUCTION_FACTORY_START_EFFICIENCY_FACTOR: "£efficiency_base_texticon  Efficacité de production de base"
@@ -1201,20 +1201,20 @@
  factory_sabotage_decrease_tooltip_REMOVED: "  £civ_factory_sabotage  Chance de sabotage des usines civiles : §H+0%§! (§R+25%§!)\n  £mil_factory_sabotage  Chance de sabotage des usines militaires : §H+0%§! (§R+25%§!)"
  resource_sabotage_decrease_tooltip_UNCHANGED: "  £sabotaged_resource_texticon  Chance de sabotage des ressources : §G-25%§! (§H+0%§!)\n  £sabotaged_resource_texticon  Durée du sabotage des ressources : §G-25%§! (§H+0%§!)"
  factory_sabotage_decrease_tooltip_UNCHANGED: "  £civ_factory_sabotage  Chance de sabotage des usines civiles : §G-25%§! (§H+0%§!)\n  £mil_factory_sabotage  Chance de sabotage des usines militaires : §G-25%§! (§H+0%§!)"
- modifier_repair_speed_infrastructure_factor: "£repair_infrastructure_texticon  Vitesse de réparation de l'§YInfrastructure§!"
- modifier_repair_speed_industrial_complex_factor: "£repair_civ_factory_texticon  Vitesse de réparation de l'§YUsine Civile§!"
- modifier_repair_speed_arms_factory_factor: "£repair_mil_factory_texticon  Vitesse de réparation de l'§YUsine Militaire§!"
- modifier_repair_speed_rail_way_factor: "£repair_infrastructure_texticon  Vitesse de réparation du §YChemin de Fer§!"
- modifier_repair_speed_dockyard_factor: "£repair_civ_factory_texticon  Vitesse de réparation du §YChantier Naval§!"
- modifier_repair_speed_air_base_factor: "£repair_infrastructure_texticon  Vitesse de réparation de la §YBase Aérienne§!"
- modifier_repair_speed_naval_base_factor: "£repair_infrastructure_texticon  Vitesse de réparation de la §YBase Navale§!"
- modifier_production_cost_infrastructure_factor: "£construction_speed_infrastructure_texticon  Coût de production de l'§YInfrastructure§!"
- modifier_production_cost_industrial_complex_factor: "£construction_speed_civfactory_texticon  Coût de production de l'§YUsine Civile§!"
- modifier_production_cost_arms_factory_factor: "£construction_speed_milfactory_texticon  Coût de production de l'§YUsine Militaire§!"
- modifier_production_cost_rail_way_factor: "£construction_speed_railway_texticon  Coût de production du §YChemin de Fer§!"
- modifier_production_cost_dockyard_factor: "£construction_speed_dockyard_texticon  Coût de production du §YChantier Naval§!"
- modifier_production_cost_air_base_factor: "£construction_speed_airbase_texticon  Coût de production de la §YBase Aérienne§!"
- modifier_production_cost_naval_base_factor: "£construction_speed_navalbase_texticon  Coût de production de la §YBase Navale§!"
+ modifier_repair_speed_infrastructure_factor: "£repair_infrastructure_texticon  Vitesse de réparation de l'§Y$infrastructure$§!"
+ modifier_repair_speed_industrial_complex_factor: "£repair_civ_factory_texticon  Vitesse de réparation de l'§Y$industrial_complex$§!"
+ modifier_repair_speed_arms_factory_factor: "£repair_mil_factory_texticon  Vitesse de réparation de l'§Y$arms_factory$§!"
+ modifier_repair_speed_rail_way_factor: "£repair_infrastructure_texticon  Vitesse de réparation du §Y$rail_way$§!"
+ modifier_repair_speed_dockyard_factor: "£repair_civ_factory_texticon  Vitesse de réparation du §Y$dockyard$§!"
+ modifier_repair_speed_air_base_factor: "£repair_infrastructure_texticon  Vitesse de réparation de la §Y$air_base$§!"
+ modifier_repair_speed_naval_base_factor: "£repair_infrastructure_texticon  Vitesse de réparation de la §Y$naval_base$§!"
+ modifier_production_cost_infrastructure_factor: "£construction_speed_infrastructure_texticon  Coût de production de l'§Y$infrastructure$§!"
+ modifier_production_cost_industrial_complex_factor: "£construction_speed_civfactory_texticon  Coût de production de l'§Y$industrial_complex$§!"
+ modifier_production_cost_arms_factory_factor: "£construction_speed_milfactory_texticon  Coût de production de l'§Y$arms_factory$§!"
+ modifier_production_cost_rail_way_factor: "£construction_speed_railway_texticon  Coût de production du §Y$rail_way$§!"
+ modifier_production_cost_dockyard_factor: "£construction_speed_dockyard_texticon  Coût de production du §Y$dockyard$§!"
+ modifier_production_cost_air_base_factor: "£construction_speed_airbase_texticon  Coût de production de la §Y$air_base$§!"
+ modifier_production_cost_naval_base_factor: "£construction_speed_navalbase_texticon  Coût de production de la §Y$naval_base$§!"
  MODIFIER_CIVILIAN_INTEL_FACTOR: "£civilian_intel_texticon  Renseignement civil"
  MODIFIER_ARMY_INTEL_FACTOR: "£army_intel_texticon  Renseignement militaire"
  MODIFIER_NAVY_INTEL_FACTOR: "£navy_intel_texticon  Renseignement naval"
@@ -1864,7 +1864,7 @@
  modifier_experience_gain_L_Air_assault_Bat_combat_factor: "£experience_neutral_combat_texticon Gain d'expérience du combat de l'infanterie d'assaut aérien légère"
  modifier_experience_gain_Arm_Air_assault_Bat_combat_factor: "£experience_neutral_combat_texticon Gain d'expérience du combat de l'infanterie d'assaut aérien blindée"
  modifier_experience_gain_atk_helo_bat_combat_factor: "£experience_neutral_combat_texticon Gain d'expérience du combat de l'hélicoptère d'attaque"
- production_cost_supply_node_factor: "£under_construction_texticon  Coût de construction du §YHub de ravitaillement§!"
+ production_cost_supply_node_factor: "£under_construction_texticon  Coût de construction du §Y$supply_node$§!"
  production_cost_supply_node_factor_desc: "Modifie le coût de construction du Hub de ravitaillement."
  SUPPLY_PENALTY_ON_CORE: "£supply_consumption_core_texticon  Pénalités de combat de ravitaillement sur le territoire central"
  supply_combat_penalties_on_core_factor: "£supply_consumption_core_texticon  Pénalités de combat de ravitaillement sur le territoire central"
@@ -2166,3 +2166,7 @@
  migration_rate_value_factor: "§YTaux de migration net§!Facteur de valeur"
  popularity_attack_modifier: "£world_tension_wargoal_texticon  Modificateur d'§Hattaque de la popularité politique§!"
  popularity_boost_modifier: "£return_on_investment_modifier_texticon Modificateur de l'§Haugmentation de la popularité politique§!"
+ modifier_production_speed_offices_factor_desc: "Modifie la vitesse de construction de $offices$."
+ modifier_production_speed_anti_air_building_factor_desc: "Modifie la vitesse de construction de $anti_air_building$."
+ modifier_production_speed_radar_station_factor_desc: "Modifie la vitesse de construction de $radar_station$."
+ modifier_production_speed_internet_station_factor_desc: "Modifie la vitesse de construction de $internet_station$."
