--- a/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
@@ -543,7 +543,7 @@
  decisions_ENG: "联合王国决议"
  falkland_policy: "福克兰政策"
  SER_rename_nation: "更名为塞尔维亚和蒙地内哥罗"
- SER_rename_nation_desc: "南斯拉夫的意思是南斯拉夫人的土地，然而90年代一系列血腥的战争带走了大部分南斯拉夫人，现在我们只是塞尔维亚人和黑山人的土地，是时候我们被称为我们自己了。"
+ SER_rename_nation_desc: "南斯拉夫的意思是南斯拉夫人的土地，然而90年代一系列血腥的战争带走了大部分南斯拉夫人，现在我们只是塞尔维亚人和黑山人的土地，是时候我们称呼真正的自己了。"
  game_rule_toggle_cheat_decisions: "§Y[show_cheat_decision_status_3]§!作弊决议§R全域性§!"
  game_rule_toggle_cheat_decisions_desc: "§Y注意：§!世界上任何国家都可以切换作弊决定，其效果是§R全域性§!。将弹出一个事件，告诉您哪个国家切换了它。\n§Y你应该确保你被允许在多人游戏中使用这个决定！§!"
  cheat_decisions_disabled_TT: "作弊：§R禁用§!"
