--- a/localisation/simp_chinese/MD_focus_FRA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_FRA_l_simp_chinese.yml
@@ -496,8 +496,7 @@
  FRA_operation_serval: "薮猫行动"
  FRA_operation_serval_desc: "“薮猫行动”是马里内战期间法国和马里领导的一系列干预行动的绰号，这是该地区针对伊斯兰极端分子的冲突的第一阶段。"
  FRA_French_pillar_of_counterterrorism: "反恐支柱"
- FRA_French_pillar_of_counterterrorism_desc: "我们的反恐、反极端力量已享誉世界，成为全球反恐的支柱和代表。"
- FRA_french_pillar_of_counterterroism_tt: "派遣§Y外国顾问§!到各国用于§Y反恐目的§!，我们的顾问将为§Y受建议国§!提供双倍加成。"
+ FRA_French_pillar_of_counterterrorism_desc: "我们的反恐、反极端力量享誉世界，成为全球反恐的支柱和代表。"
  FRA_the_french_foreign_legion: "法国外籍兵团"
  FRA_the_french_foreign_legion_desc: "法国外籍军团是法国军队的一支精锐部队，由各种专业兵员组成。该部队由当时的国王路易·菲利普于1831年组建，旨在让外国新兵加入法国军队。因此，该军团是一支多民族、多文化的战斗部队，因其纪律性和团队精神而闻名于世。"
  FRA_sahel_support_initiative: "萨赫勒支持倡议"
@@ -750,3 +749,4 @@
  FRA_idea_communist_revolution1_desc: "随着时代车轮的不断变化，革命之火也愈发旺盛。我们必须通过在国内外开展革命来推动革命之火。"
  FRA_idea_communist_revolution2: "更大的革命之火"
  FRA_idea_communist_revolution2_desc: "一场关乎人类未来的革命即将席卷全球。"
+ FRA_french_pillar_of_counterterrorism_tt: "派遣§Y外国顾问§!到各国用于§Y反恐目的§!，我们的顾问将为§Y受建议国§!提供双倍加成。"
