--- a/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
@@ -4372,9 +4372,9 @@
  PER_shaping_the_region_desc: "我们能够按照自己的喜好塑造和塑造该地区。如果我们不尽快采取行动，那么再采取行动可能就太晚了。"
  PER_advance_into_kurdistan: "挺进库尔德斯坦"
  PER_advance_into_kurdistan_desc: "我们必须进入库尔德斯坦，在那里建立合适的权力机构和中央政府。"
- PER_artesh_reforms_name: "共和国军至上"
+ PER_artesh_reforms_name: "伊朗军队至上"
  PER_artesh_reforms_name_desc: "现在共和国军凌驾于伊朗武装部队所有其他部门之上，这部分归功于我们卓越的领导能力。"
- PER_revolution.3.t: "共和国军的重新融入"
+ PER_revolution.3.t: "伊朗军队的重新融入"
  PER_revolution.3.d: "共和国军终于与我们剩余的部队重新整合。漫长而血腥的内战开始后，许多部队决定放弃战斗，只留下一小部分军队供我们对抗伊朗伊斯兰共和国和叛军。"
  PER_revolution.3.a: "前进！"
  PER_political.54234.t: "[PER.GetName]向我们提出了一个防御协定！"
