--- a/localisation/simp_chinese/MD_internal_factions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_internal_factions_l_simp_chinese.yml
@@ -403,7 +403,7 @@
  IRQ_oligarchs: "[IRQ.GetAdjective]窃盗统治"
  IRQ_the_military: "[IRQ.GetAdjective]武装力量"
  IRQ_intelligence_community: "穆卡巴拉"
- IRQ_labour_unions: "联邦总公会"
+ IRQ_labour_unions: "总工会"
  reduce_taxes_farmer_mission_tt: "我们的§Y企业税率§!低于[?reduction_target_farmers_tax_rate|Y0]%（当前：[?corporate_tax_rate|0Y]）\n"
  reduce_taxes_farmer_mission: "农民要求减税"
  reduce_taxes_farmer_mission_desc: "由于近期销售不佳和经济通胀上升，农民需要额外的资金。他们要求我们将§Y企业税率§!降低§G5%§!以帮助开展这项活动。"
@@ -493,16 +493,16 @@
  internal_factions_events.13.d: "今天，我国一家较大型的企业宣布破产。对于我们的经济来说，这真是悲伤的一天。"
  internal_factions_events.13.a: "悲哀"
  internal_factions_events.13.b: "投资商业"
- internal_factions_events.14.t: "$labour_unions$要求提高工资"
- internal_factions_events.14.d: "$labour_unions$要求迫使我国的企业和工业集团增加职工的工资。"
+ internal_factions_events.14.t: "$labour_unions$ 要求提高工资"
+ internal_factions_events.14.d: "$labour_unions$ 现在要求强制我国境内的企业和工业集团提高工人的工资。"
  internal_factions_events.14.a: "支持企业。"
  internal_factions_events.14.b: "支持工会。"
  internal_factions_events.14.c: "都不支持。"
- internal_factions_events.15.t: "$labour_unions$要求更好的医保服务"
+ internal_factions_events.15.t: "$labour_unions$ 要求更好的医保服务"
  internal_factions_events.15.d: "$labour_unions$要求我们提高医保预算。我们该怎么做？"
  internal_factions_events.15.a: "接受要求。"
  internal_factions_events.15.b: "拒绝要求。"
- internal_factions_events.16.t: "$labour_unions$要求增加福利支出"
+ internal_factions_events.16.t: "$labour_unions$ 要求增加福利支出"
  internal_factions_events.16.d: "我国工会要求我们扩大社会支出预算，以更好地支持工人和无法工作的人。我们该怎么做？"
  internal_factions_events.16.a: "接受要求。"
  internal_factions_events.16.b: "拒绝要求。"
